fix tools of change to have the planning questions

--- a/en/tools-of-change/communication/index.html
+++ b/en/tools-of-change/communication/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/programmes-scolaires-qui-engagent-la-famille/" title="left=48-rgt=49">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/programmes-scolaires-qui-engagent-la-famille/" title="left=48-rgt=49">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -129,21 +129,21 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">1.  Identify the key motivators and barriers for the desired activity.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>When participants expressed concern to The <a href="../../../en/case-studies/detail/7">Environment Network</a>'s home advisors about the effectiveness of the alternative cleaning products they were promoting, these concerns were addressed directly. In addition, such comments were used to identify people who might be motivated by concerns about cleanliness and hygiene.</p><p><a href="../../../en/case-studies/detail/8">Get in the Loop - Buy Recycled</a> used a telephone survey to determine why people were not buying more recycled-content products.</p><p> <a href="../../../en/case-studies/detail/35">Marley Station Mall</a> focused on the two most common motivators for exercising - health benefits and weight control.</p> <p>	During <a href="../../../en/case-studies/detail/114">Green$avers</a> <a href="../../../en/case-studies/detail/115">EnerGuide For Houses</a> visits a blower door test was integrated, because air leakage was considered to be the most serious area of energy loss, and the most effective and noticeable way to improve comfort and savings on energy bills.</p>
 <p class="tip_example"><strong>Tip:</strong> See also the Tools <a href="../../../en/tools-of-change/building-motivation-over-time">Building Motivation Over Time</a> and <a href="../../../en/tools-of-change/overcoming-specific-barriers">Overcoming Specific Barriers</a>.</p>
 <p class="tip_example"><strong>Tip:</strong> With face-to-face approaches you can look for clues and ask questions that     identify the most important motivators and barriers for each person you contact. Train     your program implementers to do this.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Please refer to the step-by-step instructions for identifying motivators and barriers in <a href="../../../en/planning-guide/getting-informed/">Getting Informed</a></p>
 <p>Make a list. Motivators: <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 <p>Barriers:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -151,8 +151,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Appeal to these motivators and show how to overcome these barriers in ways that evoke strong lifelike images.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Residents in <a href="../../../en/case-studies/detail/4">Claremont</a> were told: "Californians alone produce some 40 million tons of refuse a year - enough to fill a two-lane highway ten feet deep from Oregon to the Mexican border. Currently, the average person in the U.S. produces about 1,300 pounds of solid municipal waste a year. Most of this trash goes into landfills, and if present trends continue, nearly all of L.A. County will be without refuse disposal capacity by 1991."</p><p>	One year, <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> used an ASFX E8 license plate as a backdrop for its press conference, to highlight the link to air quality.</p> <p>When The <a href="../../../en/case-studies/detail/7">Environment Network</a>'s home advisors found people who seemed particularly motivated by concerns about cleanliness and hygiene, they asked them to consider the link between their water supply and household hazardous wastes spilled down the drains and toilets in their homes.</p><p><a href="../../../en/case-studies/detail/10">Go Boulder</a>'s "Non-Polluting Commuter Race" pitted cyclists against motorists in a cross-town competition, to demonstrate the convenience of riding a bicycle. Three opponent pairs (three cyclists and three motorists) were given simple tasks or errands to run en route to the finish line. Both motorists and cyclists were required to park legally and obey all traffic laws. Every year the bicyclists won.</p>
 <p class="tip_example"><strong>Tip:</strong> Use images that are as close as possible to the experience of the person or people with whom you are communicating.</p>
@@ -167,17 +167,17 @@ theForm.elements[i].checked = status;
     Cover of the Shade Trees for Guelph brochure.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For each of the motivators and barriers listed in step 1, how might you do the following?</p>
 <p>Link to activities people are already doing:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 <p>Describe the full effect of combining many small, contributing factors:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 <p>Use bar or pie charts to illustrate statistics and other numbers and make the charts "come alive" by using vivid icons as labels:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 <p>use descriptions to illustrate statistics and other numbers:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
