--- a/en/tools-of-change/feedback/index.html
+++ b/en/tools-of-change/feedback/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/motivateurs/" title="left=36-rgt=37">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/motivateurs/" title="left=36-rgt=37">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -128,27 +128,27 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1. Decide what you would like to provide feedback on..</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p> <a href="../../../en/case-studies/detail/15">JEEP</a> provided feedback on progress toward its main goal - achieving a specific reduction in electricity usage.</p> <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> participants were provided with information on both individual and group progress toward achieving the program's objectives. These objectives included diversion of waste from landfill, and reductions in the use of electricity, natural gas, water and transportation fuel. <a href="../../../en/case-studies/detail/9">GAP</a> also publicized the amount of money that participants saved through their actions, because cost savings was one factor that motivated people totake action.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>List your programs key measurable objectives (see "<a href="../../../en/planning-guide/setting-objectives/">Planning Guide)</a>".</p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	    <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	    <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	    <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
+<p>1. </p>
+<p class="indent"> Individual 	     Group</p>
+<p>2. </p>
+<p class="indent"> Individual 	     Group</p>
+<p>3. </p>
+<p class="indent"> Individual 	     Group</p>
 <p>Also list the key factors that motivate people to do the activity. Feedback on thesefactors may be particularly relevant and inspiring to participants and those interested inbecoming involved.</p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual         	<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual         <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual         <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
+<p>1. </p>
+<p class="indent"> Individual         	 Group</p>
+<p>2. </p>
+<p class="indent"> Individual          Group</p>
+<p>3. </p>
+<p class="indent"> Individual          Group</p>
 <p>Check off those you can cost-effectively track on an individual basis and on a groupbasis.</p>
 </div>
 <!--/plan_col_right--></div>
@@ -157,8 +157,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Provide individual feedback if practical.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/15">JEEP</a>, BC21 PowerSmart and the Green Community programs (see <a href="../../../en/case-studies/detail/20">ReCAP</a>, <a href="../../../en/case-studies/detail/12">Guelph 2000</a>, <a href="../../../en/case-studies/detail/7">The Environment Network</a> and <a href="../../../en/case-studies/detail/18">Peterborough GreenUp</a>) provided the installation of energy and water conservation devices, to ensure that the devices would actually be installed, and installed properly.</p><p>	Information on what each group member had done between meetings was sent by <a href="../../../en/case-studies/detail/9">GAP</a>'s EcoTeams to a central and community database. There it was converted into resulting savings for each individual and fed back to the group at the end of the program.</p> <p> <em>Resource Alert for Canadians:</em> <br/>	The <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program provides a second home visit, including blower door test, that confirms the benefits of actions taken and ensures that they were completed correctly.</p> <p><a href="../../../en/case-studies/detail/155">Sustainable Alberta</a> provided feedback on its website, and through prizes awarded directly to participants. Some participating individuals also received prizes from their employers. A party at the close of the event also allowed individuals to celebrate their participation in the event.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
@@ -166,11 +166,11 @@ theForm.elements[i].checked = status;
     A JEEP home visit team examines utility bills to determine potential cost savings available to homeowners. Future bills will provide individual feedback.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Which items (if any) that you identified in step 1 would be practical to report back to individuals?  	</p>
 <p>How might you provide this feedback?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -178,8 +178,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3. Decide how to provide cost- effective community feedback.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>	Recognition for participants in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> arranged for an average of two stories each month in the local newspaper, featuring stories of individual success and community participation. Five video presentations were run repeatedly on the community television channel. Additional feedback was provided through promotional literature, special events, and presentations to community organizations.</p><p> <a href="../../../en/case-studies/detail/15">JEEP</a> used a large, compact-fluorescent light bulb sign placed in the centre of town to provide community feed back on kilowatts of power saved. Feedback was also provided through newspaper articles, advertisements and project reports.</p> <p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> provided positive feedback to its citizens through radio spots, video presentations on local television stations, newspaper articles, and a yearly waste-reduction calendar. These featured stories about citizens and local businesses who participated effectively in the Blue Box 2000 program and made a difference in their community through their composting or recycling efforts.</p>
 <p class="tip_example"><strong>Tip:</strong> In general, stick to a few items to give community feedback.</p>
@@ -189,19 +189,19 @@ theForm.elements[i].checked = status;
     JEEPs community feedback sign.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>List the items for which you can provide community feedback:</p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p>1. </p>
+<p>2. </p>
+<p>3. </p>
 <p>How could you provide it?  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>signs tracking progress <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> media  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> wall calendars  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> literature/newsletters  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> special events  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> presentations</p>
+signs tracking progress <br/>
+ media  <br/>
+ wall calendars  <br/>
+ literature/newsletters  <br/>
+ special events  <br/>
+ presentations</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
