--- a/en/tools-of-change/financial-incentives-and-disincentives/index.html
+++ b/en/tools-of-change/financial-incentives-and-disincentives/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/communications-personnalisees-percutantes/" title="left=38-rgt=39">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/communications-personnalisees-percutantes/" title="left=38-rgt=39">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -130,16 +130,16 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1. Determine through research how motivated your community would be to do the action as desired without resorting to financial incentives. Proceed only if the incentive is required.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p> <a href="../../../en/case-studies/detail/15">JEEP</a> wanted people to purchase and install energy saving devices. For some devices, like power saver cords for car block heaters, this was a "once only" purchase; for other devices, like compact fluorescent light bulbs, the aim was to induce trial and continued purchase. Research had revealed that, in the short term, residents were unlikely to make the purchases without some sort of incentive.</p> <p><a href="../../../en/case-studies/detail/114">Green$aver's</a> <a href="../../../en/case-studies/detail/115">EnerGuide</a> audits were detailed and focused enough that customers could see their value and were willing to pay for them. However, GreenSaver's market surveys found that homeowners would not pay more than $150 for the assessments. The actual cost of providing each assessment was at least $300. Half the cost of the assessments was subsidized by Natural Resources Canadas sponsorship and half was paid by customers.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> found that although the combined power of all tools was most effective, the single most effective was implementing direct financial incentives. People were much more willing to scrap their lawn mowers if they knew they would receive a $50 coupon for an electric mower or push mower.</p> <p>	The <a href="../../../en/case-studies/detail/51">Better Buildings Partnership</a> developed self-sustaining financial incentives. Interest free loans and/or loan repayment insurance were offered to finance building retrofits leading to guaranteed utility savings. A portion of the savings went back to the participants, and a portion went to the Partnership to finance future loans and programs.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For instructions on how to do this research refer to <a href="../../../en/planning-guide/getting-informed/">Getting Informed</a>.</p>
 <p>Are financial incentives / disincentives necessary?<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Yes <a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> No</p>
+ Yes  No</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -147,8 +147,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2. Make sure that the incentive / disincentive is large enough to be taken seriously.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> held a draw for over 100 prizes related to resource-efficient commuting, such as bikes and accessories, transit passes and in-line skates.</p>
 <p> <a href="../../../en/case-studies/detail/15">JEEP</a> subsidized up to 80 percent of the cost of targeted products and renovations.</p> <p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) charged $1.50 for every extra bag of garbage collected.</p> <p>	To minimize attrition, <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> gave $25 to those completing its program.</p>
@@ -156,10 +156,10 @@ theForm.elements[i].checked = status;
 <p class="tip_example"><strong>Tip:</strong> If a financial incentive is not required, focus on the Tools <a href="../../../en/tools-of-change/norm-appeals">Norm Appeals</a>, <a href="../../../en/tools-of-change/building-motivation-over-time">Building Motivation Over Time</a> and <a href="../../../en/tools-of-change/obtaining-a-commitment">Obtaining a Commitment</a>.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What incentives / disincentives have worked elsewhere? What would work in your situation?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -167,15 +167,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3. Ensure that the incentive is noticeable and provided at the right time(s). Read this <a href="https://www.sciencedirect.com/science/article/pii/s2214629621000517#bfn2" target="_blank">paper</a> for some tips on shaping, scheduling and delays.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p> <a href="../../../en/case-studies/detail/15">JEEP</a> went door to door to communicate the incentives to residents.</p> <p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.</p> <p><em>Resource Alert for Canada and the U.S.A.:</em> Considering offering sales-persons incentives, to encourage them to remind buyers of the benefits of energy-efficient appliances? Canada's <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> advertised and promoted its lawnmower buyback program through "stuffers", which were advertisements included in Portland General Electric's bills to residents. In addition, it used television public service announcements to promote the program, as well as posters in local stores, print advertisements, weekend promotions at the home renovation store Home Depot and local neighborhood events.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How will you ensure that people notice your incentives and that they are are provided at the right time(s)? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -183,17 +183,17 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4. Design the incentive / disincentive to discourage evasion.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/15">JEEP</a> had to place a limit of eight reduced-price, compact fluorescent bulbs per home and five per apartment after the first two days of the program. It had become apparent that people were buying large quantities as gifts for people outside of Jasper. A limit of two indoor and two outdoor lighting timers per residence was also set.</p><p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.</p> <p> <em>Resource Alert for Canada and the U.S.A.:</em> Considering offering consumer and/or sales-person incentive program? Canadas <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.</p> <p>	A program that promoted <a href="../../../en/case-studies/detail/140">compact fluorescent lights</a> through manufacturers rebates, required the manufacturers to commit to selling 30% of their inventory allocated for rebate within three weeks, 60% in eight weeks and 100% in twelve weeks. If a manufacturer failed to meet the deadlines or performance criteria, its rebates were reassigned to other manufacturers.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>List the ways people might be able to evade your incentive / disincentive.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 <p>Now go back and note how you can discourage each evasion.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
