--- a/en/tools-of-change/home-visits/index.html
+++ b/en/tools-of-change/home-visits/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/de-bouche-a-oreille/" title="left=50-rgt=51">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/de-bouche-a-oreille/" title="left=50-rgt=51">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -134,17 +134,17 @@ theForm.elements[i].checked = status;
 </ul>
 </div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors received the standard 10-day training course that the Ontario Government provided to each new Green Community. They devoted 1 1/2 days to learning and practising social marketing skills.</p><p>	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>s counselors received intensive training followed by months of supervision.</p>
 <p class="tip_example"><strong>Tip:</strong> Training materials are available from the Green Communities Association (see the ReCAP case study).</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What training will you provide? <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -152,29 +152,29 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2. Obtain an invitation or agreement to spend time with the resident.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/2">Be Water Wise</a> found it relatively straightforward to visit homes without advance notice and provide information. However, when they tried to sell water conservation kits through these visits they found that few homes were willing to buy - even though the kits were offered at a significant discount. Furthermore, residents who were asked to make a purchase were less likely to sign an agreement to participate in the program even though the agreement did not require making the purchase.</p><p><a href="../../../en/case-studies/detail/6">Earth-Works</a>, The <a href="../../../en/case-studies/detail/22">Toxic Challenge</a> and <a href="../../../en/case-studies/detail/24">We're Toxic Free</a> all approached people at their homes without any advance notice. Quizzes and incentives were used to interest them in spending further time.</p><p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> pilot tested its starter kits with 150 participants.</p> <p>When <a href="../../../en/case-studies/detail/12">Guelph 2000</a> introduced its free shade tree program, 35 percent of its home visits were booked by people who called specifically for that incentive. Another 10 percent of the visits were a result of telemarketing efforts and 30 percent came from word-of-mouth promotion.</p>
 <p class="tip_example"><strong>Tip:</strong> If you are going to ask people to spend a significant amount of time or money, have them request the visits.</p>
 <p class="tip_example"><strong>Tip:</strong> See <a href="#table1">Table 1 </a>below.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Which of the following apply to you?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> your home visit usually takes less than 20 minutes <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> you will not be asking people to pay for anything <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> the majority of homes in your community would benefit from your visit</p>
+<p> your home visit usually takes less than 20 minutes <br/>
+ you will not be asking people to pay for anything <br/>
+ the majority of homes in your community would benefit from your visit</p>
 <p>If you checked off all of the above, or if you are visiting a retirement or cottage community, you probably do not need to book your visits ahead of time.</p>
 <p>Otherwise, you are probably better to ask that residents call ahead to book a visit. In this case, how might you make use of the following promotional options?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> the mass media <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> school programs <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> special events/displays <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> special incentive programs <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> telemarketing <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> tax and utility bill inserts <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> word-of-mouth</p>
+<p> the mass media <br/>
+ school programs <br/>
+ special events/displays <br/>
+ special incentive programs <br/>
+ telemarketing <br/>
+ tax and utility bill inserts <br/>
+ word-of-mouth</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -182,12 +182,12 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3. Build the resident's motivation to take action. Provide financial incentives if appropriate.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>When The <a href="../../../en/case-studies/detail/7">Environment Network</a>'s home advisors found people who seemed particularly motivated by concerns about cleanliness and hygiene, they asked them to consider the link between their water supply and household hazardous wastes spilled down the drains and toilets in their homes.</p><p><a href="../../../en/case-studies/detail/20">ReCAP</a> linked its recommendations to each householder's motivators. Advisors listened carefully to a householder's remarks, both during the initial interview and throughout the home visit, and identified clues that suggested where their interests lay. For example, if a householder expressed interest in gardening, or a well-maintained garden was noted, advisors would stress garden-related recommendations (e.g., using native plants, planting shade trees, composting).</p><p>To motivate clients to feed and care for their baby before birth, the <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> emphasized the idea of a fetus as an individual with real needs ones only the mother was in a position to provide. Women were taught that they were eating to feed their unborn babies, as well as themselves. A developing babys special needs for growth, the "building of a baby", was compared to the "building of a house" requiring the intake of nutrients as building blocks for the child.</p><p>Participants in <a href="../../../en/case-studies/detail/106">Ashland</a>'s home energy audit program were offered cash grants covering up to 60% of the total installation costs for the measures identified in the audits, or up to 100% for low-income residents.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For step-by-step instructions on how to do this, see the Tools <a href="../../../en/tools-of-change/building-motivation-over-time/">Building Motivation Over Time</a> and <a href="../../../en/tools-of-change/financial-incentives-and-disincentives/">Financial Incentives and Disincentives</a>.</p>
 </div>
@@ -197,8 +197,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4. Help the resident overcome any specific barriers that might prevent them from taking action.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors installed a number of conservation devices free of charge -overcoming a number of potential barriers including lack of time, confidence, knowledge and money. Furthermore, when they encountered residents who were concerned about the up-front costs of a recommendation, they offered EnviroLoans at lower than average interest rates.</p><p>During the home visit, the <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>'s counselors assessed each clients living conditions (e.g. food stocks, cooking facilities) and used this information to tailor a dietary intervention. To minimize resistance to making changes to ingrained eating habits, diets were designed to introduce as few changes as possible.</p><p> <a href="../../../en/case-studies/detail/156">Water Efficient Durham</a> gave homeowners rain gauges, reminder tags and educational literature.</p> <p><a href="../../../en/case-studies/detail/658">Smart Trips Welcome</a> delivered orders by bicycle so new residents could speak with a transportation expert face-to-face. A phone call to all participants was made approximately two weeks after delivery of the materials, giving participants the chance to ask questions and for program staff to provide support and encouragement.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
@@ -206,7 +206,7 @@ theForm.elements[i].checked = status;
     A staff person installs weather-stripping in the Okanagan First Nations Community Project (BC21 PowerSmart).</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For step-by-step instructions on overcoming barriers, see the Tool <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>.</p>
 </div>
@@ -216,12 +216,12 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">5. Ask the resident for an agreement to carry out the actions you are promoting.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Please refer to the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>.</p>
 </div>
