--- a/en/tools-of-change/mass-media/index.html
+++ b/en/tools-of-change/mass-media/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/" title="left=52-rgt=53">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/" title="left=52-rgt=53">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -145,24 +145,24 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1. Using the right-hand column as a guide, consider some ways you might work with the media.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>	Each year, <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> was promoted through a month-long Clean Air Campaign, which raised awareness about the need for cleaner commuting practices. The campaign consisted of billboard advertisements, public service announcements, press conferences and other media coverage.</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> organized a "Non-Polluting Commuter Race" which pitted cyclists against motorists in a cross-town competition. The goal of the exercise was to demonstrate the convenience of riding a bicycle.</p><p><a href="../../../en/case-studies/detail/15">JEEP</a> developed a newspaper advertising campaign consisting of a series of lifestyle advertisements. In addition, other advertisements described the program and provided instructions on booking an appointment with a <a href="../../../en/case-studies/detail/15">JEEP</a> Team. The official opening of the program was covered by the provincial media. Canada's first Energy Innovators Award was presented to the program at this event by Natural Resources Canada.</p><p><a href="../../../en/case-studies/detail/18">Peterborough GreenUp</a> staff wrote a weekly column for the local city newspaper. The column provided seasonal information and feedback, helped remind people about the actions being promoted, and raised awareness about their program.</p>
 <p class="tip_example"><strong>Tip:</strong> Do not forget local community newspapers.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Which of the following might make sense for your program?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Advertising in newspapers, radio, television</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Inviting the media to cover a program launch or special event</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Involving a celebrity in your program and arranging for related media coverage</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Arranging a quiz or contest in cooperation with the media</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Inserts and messages directly on utility bills</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Regular newspaper columns</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Radio spots</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Video clips for television</p>
+<p> Advertising in newspapers, radio, television</p>
+<p> Inviting the media to cover a program launch or special event</p>
+<p> Involving a celebrity in your program and arranging for related media coverage</p>
+<p> Arranging a quiz or contest in cooperation with the media</p>
+<p> Inserts and messages directly on utility bills</p>
+<p> Regular newspaper columns</p>
+<p> Radio spots</p>
+<p> Video clips for television</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
