--- a/en/tools-of-change/norm-appeals/index.html
+++ b/en/tools-of-change/norm-appeals/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/visites-a-domicile/" title="left=40-rgt=41">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/visites-a-domicile/" title="left=40-rgt=41">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -117,15 +117,15 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1. Design the activity itself to be as visible as possible.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/12">Guelph 2000</a> had residents stake the spot on their properties where their shade trees would be planted. The stakes were painted bright green and had the name <a href="../../../en/case-studies/detail/12">Guelph 2000</a> marked on them.</p><p><a href="../../../en/case-studies/detail/131">Aarhus Bike Busters</a> held an opening ceremony on Town Square, where participants were given their bicycles. They all rode an inaugural lap of the town, making the project a visible public event.</p><p><em><a href="../../../en/case-studies/detail/660">BIXI </a></em>bikes were designed to be distinctive, so people noticed when they were being used.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How can you make the activity as visible as possible?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -133,8 +133,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2. Provide additional "markers" of participation.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>	T-shirts, caps, and umbrellas with campaign logos increased the visibility of participation in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>.</p> <p><a href="../../../en/case-studies/detail/6">Earth-Works</a> provided participating business establishments with door stickers advertising that they were active composters. This helped to reinforce composting as a community activity. They also provided residents with lawn signs.</p><p>When <a href="../../../en/case-studies/detail/20">ReCAP</a> teams were doing home visits they placed a sign on the resident's lawn to inform the neighbours.</p><p><a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> put stickers on participants' Blue Boxes that read: "We Compost Too."</p>
 <p class="tip_example"><strong>Tip:</strong> This     is particularly important if the activity itself  cannot be made very visible.</p>
@@ -143,29 +143,29 @@ theForm.elements[i].checked = status;
     An Earth-Works lawn sign.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How might you make use of the following? </p>
 <p>Decals:</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 <p>Lawn, garden or window signs:</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 <p>Lapel pins:</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></div>
+</div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
 <div class="clear"> </div>
 <!--/clear_the_area-->
 <div class="yellow_headers">3. Build in opportunities for people to share their experiences and other forms of "word-of-mouth" promotion.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>At each EcoTeam meeting, participants of the <a href="../../../en/case-studies/detail/9">Global Action Plan</a> shared experiences and results from the previous month.</p>
 <p>GAP participants were prepared for the recruiting stage of the program during their introductory event when <a href="../../../en/case-studies/detail/9">GAP</a> was described as a program for developing sustainable lifestyles and then helping others to do the same. At the first EcoTeam meeting, participants were introduced to the recruiting process and then asked: "Are you up to attempting to create two more teams at the end of the program?"</p>
 <p>A 1996 study of recruiting in the U.S.A. found that 40 percent to 50 percent of individuals who were approached to attend an introductory event agreed to do so, and 85 percent of individuals who attended the introductory event joined EcoTeams.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were urged, "If you were happy with the service you received, please tell others about it."</p><p>In the <a href="../../../en/case-studies/detail/622/">AIDS Peer Education Program</a>, presentations were performed by peers who were openly in favor of abstinence and condom use. This sent a powerful message to other teens that these choices were not only important but socially acceptable.</p><p> <a href="../../../en/case-studies/detail/34">Le Club Millezinc</a> trained older students to deliver presentations to younger students.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For step-by-step instructions on this, see the Tool <a href="../../../en/tools-of-change/word-of-mouth">Word-of-mouth</a>.</p>
 </div>
@@ -175,31 +175,31 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4. Record people's participation and show it to others.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>The appeal that asked <a href="../../../en/case-studies/detail/4">Claremont</a> residents to recycle stated: "Over 80 percent of <a href="../../../en/case-studies/detail/4">Claremont</a>ers favour the city's recycling program."</p><p>	When employees arrived at work on the day of <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>, they marked the activity they undertook on a chart. Pollution Probe collected the charts and tabulated accumulated points. Recognition was later provided through an awards ceremony for companies that earned the greatest number of points and through congratulatory newspaper ads which listed all participating companies.</p> <p>During their home visits, <a href="../../../en/case-studies/detail/6">Earth-Works</a>' Compost Doctors pointed out how neighbours had overcome similar problems with their composters.</p><p><a href="../../../en/case-studies/detail/10">Go Boulder</a>, <a href="../../../en/case-studies/detail/15">JEEP</a>, <a href="../../../en/case-studies/detail/20">ReCAP</a> and <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> all illustrate the use of media stories that showed community members participating.</p>
 <p class="tip_example"><strong>Tip:</strong> Show     the involvement of appropriate "opinion leaders" - respected people in the     community that others will emulate, such as local heros, or business, spiritual or     political leaders.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How could you make use of the following? </p>
 <ul>
 <li>media and other stories of people participating:  			<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></li>
+</li>
 </ul>
 <ul>
 <li>home/garden tours: 			<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></li>
+</li>
 <li>public commitments: 			<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></li>
+</li>
 <li>photo albums: 			<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></li>
+</li>
 </ul>
 <ul>
 <li>statistics on community members attitudes and participation: 			<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></li>
+</li>
 </ul>
 </div>
 <!--/plan_col_right--></div>
