--- a/en/tools-of-change/peer-support-groups/index.html
+++ b/en/tools-of-change/peer-support-groups/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/etudes-de-cas/recherche-de-etudes-de-cas/" title="left=56-rgt=57">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/" title="left=56-rgt=57">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -127,16 +127,16 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Structure the groups so that people take turns playing leadership roles. Provide adequate support for the leaders.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Members of <a href="../../../en/case-studies/detail/9">Global Action Plan's (GAP)</a> EcoTeams took turns leading their meetings, with support from a GAP-trained volunteer coach who had already been through the program. The coach attended the group's first and last meeting, and provided telephone support in between for each person leading a group meeting. In turn, each person who led a meeting supported other group members in making changes related to that meeting.</p>
 <p>A workbook led the group step by step through its activities. In addition, a Topic Leader Guide specific to each meeting's topic was provided to each of the group's leaders.</p><p><a href="../../../en/case-studies/detail/678">HoMBReS</a> asked each intervention soccer team to elect one group leader (navegante). They were respected by their peers because they were chosen by them based on their community reputation, good judgment and levels of care and discretion.These <em>navegantes</em> were then trained to provide STD/HIV prevention education and prevention information, service and resource referral to their teammates. They not only served as sources of information and referral, but as opinion leaders to change risky behavioral norms. Each navegante received a resource manual to maintain, refer to and supplement with information over the course of the intervention. Upon completion of the training, each navegante received a graduation certificate and was compensated $50 for each training session.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What support can you provide your group leaders?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -144,8 +144,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Design group meetings so that all participants apply what is being discussed to their own households.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> participants analyzed how their households made use of resources. Then, using the workbook as a guide, they adopted specific actions each month at home.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
@@ -153,10 +153,10 @@ theForm.elements[i].checked = status;
     This portion of a Topic Leader Guide illustrates the level of support provided to the leader of each meeting, as well as the support provided by these leaders to the other members of their group. For further excerpts see Global Action Plan in the Case Studies.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How can you ensure that participants apply what is being discussed within their own households?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -164,15 +164,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3.   Make sure that the groups are the right size.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a> advised having 6-12 people per group. Organizers were told: "If there are too many people, there is not enough time in the meetings for each person to talk. If there are too few, the group is too small to generate the excitement and motivation that a larger group can create."</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What size groups do you want to create?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -180,15 +180,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4.   Set up the groups to meet at least six times, no more than two to three weeks apart.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p> <a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a>'s EcoTeams met eight times, two weeks apart.</p> <p><a href="../../../en/case-studies/detail/678">HoMBReS</a> ran its soccer team meetings either before or after practice.</p><p><a href="../../../en/case-studies/detail/684"><em>Boston's Challenge for Sustainability</em></a> held monthly meetings and networking opportunities. </p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How many times will your groups meet? How frequently will the meetings take place?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -196,14 +196,14 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">5.  Provide group members with ongoing feedback and encouragement.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/9">Global Action Plan (GAP)</a>'s feedback methods allowed each participating member to see how their actions were affecting the environment positively. The activities of each EcoTeam were recorded and sent to a central and community database. These reports were translated into information about the amount of realized savings that each member of the EcoTeam had achieved. This information was fed back to the EcoTeam at the end of the program.</p>
 <p>Information on the collective accomplishments of all EcoTeams was also tabulated anddistributed in the EcoTeam newsletter, Stewardship. This newsletter provided past andcurrent participants with information on global EcoTeam accomplishments and helpedmaintain behavioural changes in those members who had completed the program.</p>
 <p>A Web site also provided feedback information. Other methods within each communityincluded newspapers, TV, bulletin boards, computer networks, and awards.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For step-by-step suggestions on doing this, please see the Tool    <a href="../../../en/tools-of-change/feedback/">Feedback</a>.</p>
 </div>
@@ -213,19 +213,19 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">6.  Build in a sustainable process for recruiting new groups.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>In the final sections of <a href="../../../en/case-studies/detail/9">GAP</a>'s Neighbourhood Lifestyles Program, members were encouraged to initiate at least two more EcoTeams and were provided with a standard recruiting script used to invite their neighbours to an informal introductory event at their homes. This introductory event educated neighbours about the program and helped them to decide whether they wanted to join a team.</p>
 <p>Participants were prepared for this recruiting stage during their introductory event when <a href="../../../en/case-studies/detail/9">GAP</a> was described as a program for developing sustainable lifestyles and then helping others to do the same. At the first EcoTeam meeting, participants were introduced to the recruiting process and then asked: "Are you up to attempting to create two more teams at the end of the program?"</p>
 <p>A 1996 study of recruiting in the U.S.A. found that 40 percent to 50 percent of individuals who were approached to attend an introductory event agreed to do so, and 85 percent of individuals who attended the introductory event joined EcoTeams.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>List some ways of helping participants recruit new groups.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 <p>How might you prepare participants for this role?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
