--- a/en/tools-of-change/prompts/index.html
+++ b/en/tools-of-change/prompts/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/outils-de-changement/groupes-de-soutien-par-les-pairs/" title="left=46-rgt=47">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/outils-de-changement/groupes-de-soutien-par-les-pairs/" title="left=46-rgt=47">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -123,12 +123,12 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Ensure that people are already predisposed to doing the activity and that key barriers that would prevent them from carrying it out are being addressed.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Research conducted by <a href="../../../en/case-studies/detail/8">Get in the Loop - Buy Recycled</a> showed that people were generally willing to buy recycled-content products. It also identified three key barriers that the program was therefore designed to overcome. In addition, the organizers provided an intense, broad-based promotional campaign to raise awareness about the program and prepare consumers for seeing the prompts.</p><p>Free Blue Boxes were given to residents in <a href="../../../en/case-studies/detail/19">Quinte</a>, so that they could conveniently place recyclables at the curb for pick up. A strong promotional and educational campaign instructed people about what materials were to be recycled and how to put them out for collection. In addition, the bright blue colour of the boxes helped establish a community norm for participating - people saw their neighbours doing it.</p><p>	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> provided financially disadvantaged clients with vouchers for home-delivered milk along with one dozen eggs and a supply of minerals every two weeks. All clients received personalized nutritional counseling.</p> <p>The <a href="../../../en/case-studies/detail/117">ABC / Count Me In!</a> programs only provided prompts to people who had already committed to do certain activities.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>For step-by-step instructions, see the Tools <a href="../../../en/tools-of-change/building-motivation-over-time/">Building Motivation Over    Time</a>,  <a href="../../../en/tools-of-change/financial-incentives-and-disincentives/">Financial Incentives and Disincentives</a> and  <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>.</p>
 </div>
@@ -138,8 +138,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Make the prompt noticeable.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>The bright Blue Boxes used in <a href="../../../en/case-studies/detail/19">Quinte</a> were hard to miss. The "Beside and Inside" cards were 8.5" x 14" and printed in two colours.</p><p>	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> encouraged clients to drink sufficient milk to feed their baby. To reinforce this habit, women were encouraged to write B for baby on bottles of milk.</p> <p>	At <a href="../../../en/case-studies/detail/35">Marley Station Mall</a>, large signs suggesting that people use the stairs, were placed on an easel beside the malls escalators.</p> <p> <a href="../../../en/case-studies/detail/101">Portland</a> partnered with its retailers to promote the sale of products that were low in VOC emissions and therefore contributed to producing cleaner air. One retail chain, Fred Meyer, agreed to general signage, announcements, "bag" art on grocery sacks and buttons for store personnel. The program also displayed environmental information for certain products on shelves, such as hair spray and paint, and encouraged customers to choose the products that were lower in VOC emissions.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
@@ -147,10 +147,10 @@ theForm.elements[i].checked = status;
     Get in the Loops shelf talkers were 4.25 inches tall by 5.5 inches high (10.8 cm x 13.3 cm) and were printed in three colours. They carried the same logo that was used in all advertising and promotion.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What are some ways that you can ensure that your prompt is noticeable?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -158,15 +158,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  Describe in positive, clear terms the specific action that you want people to do.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/8">Get in the Loop - Buy Recycled's</a> posters asked shoppers to "Look for this Symbol" (the program logo on the shelf talkers).</p><p><a href="../../../en/case-studies/detail/19">Quinte's</a> Blue Boxes carried the words, "We recycle." In some locations, decals were also placed on the boxes, listing the materials that could be placed in them for collection. In addition, the "Beside and Inside" cards listed which reyclables to put inside, and which to put alongside, the box.</p><p>	The signs used at <a href="../../../en/case-studies/detail/35">Marley Station Mall</a> said: Your heart needs exercise, use the stairs and Improve your waistline, use the stairs.</p> <p>The <a href="../../../en/case-studies/detail/117">ABC / Count Me In!</a> programs sent participants e email messages that asked them to click through to a personalized website address that reminded them about the actions they had pledged to do at the workshop.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What are some positive words you could use to clearly identify the action you want people to take?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -174,15 +174,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4.  Ensure that the prompt is presented as close in time and space as possible to the action you want people to do.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/8">Get in the Loop - Buy Recycled's</a> in-store promotional items were placed near where the buying decision was made. The shelf talkers in particular were noticed by shoppers just as they were about to select each product from the shelf.</p><p><a href="../../../en/case-studies/detail/19">Quinte</a> residents who saw their neighbours putting out their Blue Boxes the night before collection were reminded to do the same. The "Beside and Inside" cards were compact, attractive and sturdy enough that people put them up on their kitchen refrigerators.</p><p>	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> encouraged clients to drink sufficient milk to feed their baby. To reinforce this habit, women were encouraged to write B for baby on bottles of milk.</p> <p>	At <a href="../../../en/case-studies/detail/35">Marley Station Mall</a>, large signs suggesting that people use the stairs, were placed on an easel beside the malls escalators.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How might you do this?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
