--- a/en/tools-of-change/school-programs/index.html
+++ b/en/tools-of-change/school-programs/index.html
@@ -91,7 +91,7 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -124,12 +124,12 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Help participants overcome any specific barriers that might prevent their taking action.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Lack of family support arising from safety concerns was found to be the major barrier to children riding to and from school. Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program therefore focused on bicycle safety, kept parents informed, and encouraged them to participate and see the skills their children were acquiring.</p><p>To help parents comply with their litterless lunch program, <a href="../../../en/case-studies/detail/16">Norway</a> Public School sold subsidized reusable lunch bags containing reusable food containers.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> found that child safety issues were a key barrier to getting children to walk and cycle to school, due to an increase in traffic injuries and fatalities as well as threats of bullying, harassment and abduction. Their program focused on ways of addressing these safety issues.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Identify and address specific barriers to your program by following the procedure outlined in the Tool <a href="../../../en/tools-of-change/overcoming-specific-barriers/">Overcoming Specific Barriers</a>.</p>
 </div>
@@ -139,16 +139,16 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Provide in-class instruction and testing related to the activities being promoted.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/3">Bike Smarts</a> provided in-class instruction on riding safety. To complete the program, the students were required to pass both a written test and an "on-bike" cycling skills test.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Blazing Trails Through the Urban Jungle was a classroom mapping activity that complemented the Ontario school board curriculum in social studies, mathematics, and science. By mapping street names, landmarks, and safe places, for example, children felt safer and more confident traveling in their community.</p> <p> <a href="../../../en/case-studies/detail/145">Auto$mart</a> implemented a Student Driver Program to teach energy-efficient driving habits to novice drivers through existing driver education programs. Most of the habits being promoted also contributed to safer driving, so the messages were consistent with existing driver education curriculums.</p> <a href="../../../en/case-studies/detail/176/">Working Towards Peace </a>
  developed an extensive curriculum accompanied by skills sessions and multi-disciplinary extensions for the classroom.</div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How do the activities being promoted fit into the school curriculum? Outline possible in-class activities and the time required for each.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -156,15 +156,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  Provides students with opportunities to practise the actions under supervision.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Participants in Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program took part in five neighbourhood trips and one longer field trip, during which they practised their cycling skills.</p><p><a href="../../../en/case-studies/detail/16">Norway</a> Public School had volunteer lunch room monitors remind other students to separate compostable scraps and recyclables and to place them in collection bins.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Walking and Cycling School Buses enabled parents to provide children with personal assistance and supervision.</p> <p>Students were able to practice skills they learned in  <a href="../../../en/case-studies/detail/176/">Working Towards Peace</a> though: role-playing, skits, creative writing, games, and group activities.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What supervised practice opportunities can you provide?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -172,15 +172,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4.   Ask that the actions be practised repeatedly at home.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>To qualify for the field trip at the end of the <a href="../../../en/case-studies/detail/3">Bike Smarts</a> program, Lochside School's students were required to have cycled 100 km during the six-week period of the program.</p><p>For children to bring litterless lunches to school in <a href="../../../en/case-studies/detail/16">Norway</a> Public School's Litterless Lunch Program, parents had to change their use of disposable packaging at home.</p><p>Students were asked to practice their new knowledge and skills gained in  <a href="../../../en/case-studies/detail/176/">Working Towards Peace </a>  outside the school through a service-learning project related to peaceful conflict resolution.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How can you encourage home practice of the actions?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -188,21 +188,21 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">5. Involve other members of the family.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/3">Bike Smarts</a> strongly encouraged parental participation in its neighbourhood outings and field trip. As a direct result of the program, 4 of the 16 parents cycled at least 20 percent more than they used to.</p><p><a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> required students to question each member of their households about energy use. The resulting data were brought to school and analyzed.</p>
 <p><a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> coached each student on drawing up a plan of action with his or her household to save energy at home. Once completed, it was signed by both the student and the head of the household.</p><p><a href="../../../en/case-studies/detail/25">Whitney Public School</a> asked parents to monitor their children's recycling efforts, to help their children count the number of items recycled during a week, and to indicate if their children had satisfactorily completed an assignment. To participate actively, the parents needed to read a recycling flyer from the local public works department.</p>
 <p>The students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> took over their homes' recycling activities for a week. This enabled them to see where improvements could be made by the household and encouraged them to promote these changes in their homes.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s active transportation program required participation by a sufficient number of families in participating communities.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How might you involve other members of the family? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> involve parents in practising/doing the activity with the students </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> have parents check students achievements </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> have students collect data from their families </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> have students assume household responsibilities that will affect others in their homes  (e.g., recycling)  </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> ask the entire family to make a commitment to participate (see the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>)  </p>
+<p> involve parents in practising/doing the activity with the students </p>
+<p> have parents check students achievements </p>
+<p> have students collect data from their families </p>
+<p> have students assume household responsibilities that will affect others in their homes  (e.g., recycling)  </p>
+<p> ask the entire family to make a commitment to participate (see the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment/">Obtaining a Commitment</a>)  </p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -210,15 +210,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">6.  Ask students to record their actions and achievements in some way (e. g., in a journal).</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>	Lochside School's program (<a href="../../../en/case-studies/detail/3">Bike Smarts</a>) had participants record the distances biked.</p> <p>Students at <a href="../../../en/case-studies/detail/25">Whitney Public School</a> weighed or counted the amount of each type of material they recycled and plotted the information on a graph.</p><p><a href="English/CaseStudies/default.asp?ID=9">Global Action Plan (GAP)</a> provided a place in the workbook for participants to record the actions they had taken at home.</p><p> <a href="../../../en/case-studies/detail/97">Greenest City</a> asked each participating school to report on the number of children involved in each activity, and the average distance travelled by participants to school.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>Specify the methods you will provide for students to record their actions. 	</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -226,15 +226,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">7.  Provide incentives and disincentives.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Lochside School's program offered three key motivators: an attractive end-of-program field trip, an opportunity for students to get out of school, and stickers for completion of each part of the <a href="../../../en/case-studies/detail/3">Bike Smarts</a> Program.</p><p>The United Nations Environmental Program (UNEP) provides a "Global Hero Award Program" to motivate children participating in <a href="../../../en/case-studies/detail/9">GAP's</a> Journey for the Planet. This program acknowledges children's success stories, and provides certificates and patches for completing a certain number of the actions promoted.</p><p> <a href="../../../en/case-studies/detail/122"><strong>Off ramp</strong></a> successfully used small incentives such as water bottles, stickers and buttons for those switching to new forms of transportation. One day at Terry Fox Secondary School, free hot chocolate was given out to all students and teachers who walked to school. At another school, bike safety packages were given out as prizes, to encourage bike use.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How could you do this? Follow the procedure outlined in the Tool <a href="../../../en/tools-of-change/financial-incentives-and-disincentives/">Financial Incentives and    Disincentives</a>.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -242,15 +242,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">8.  Provide feedback.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>As Lochside School's <a href="../../../en/case-studies/detail/3">Bike Smarts</a> students learned safety skills, they were awarded achievement stickers and were given a certificate on completion of the program.</p><p>Using home energy use data collected by each student, <a href="../../../en/case-studies/detail/13">In Concert with the Environment</a> provided participating households with personalized computer reports with suggestions for improvement.</p><p>	Providing feedback was an essential part of the <a href="../../../en/case-studies/detail/135">Way To Go!</a> approach. Way To Go!s success depended on the participation of families - and these families needed to know that their actions were making a difference. Schools generally provided feedback directly to students, staff, teachers, parents and principals through school newsletters, bulletin-board postings and by walking from class to class to disseminate information.</p> <p>	The <a href="../../../en/case-studies/detail/122"><strong>off ramp</strong></a> group at each school created posters showing their survey results and a comparison with the baseline survey results. They also advertised the results through school newsletters and flyers.</p> </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>List the possibilities for providing feedback for your own program. See    the Tool <a href="../../../en/tools-of-change/feedback/">Feedback</a>.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
