--- a/en/tools-of-change/word-of-mouth/index.html
+++ b/en/tools-of-change/word-of-mouth/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/fr/ressources-de-sujets/recherche-de-ressources-de-sujets/" title="left=60-rgt=61">Français</a></li>
+<li class="last_nav"><a class="" href="../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/" title="left=60-rgt=61">Français</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../en/planning-guide/" id="hb_2">Planning Guide</a> </li> <li><a class="menu_class_current" href="../../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class" href="../../../en/case-studies/" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -122,15 +122,15 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1. Provide program participants with an experience of such quality that they will want to tell others about it.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Several weeks after each home visit, <a href="../../../en/case-studies/detail/1">BC21 PowerSmart</a> returned to the homes to verify that products left behind had been properly installed and that residents were satisfied.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How will you monitor and ensure peoples satisfaction with your program and the activity you are promoting?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -138,15 +138,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2. Leave participants with "show and tell," and other promotional materials to encourage and help them to tell others.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p> <a href="../../../en/case-studies/detail/15">JEEP</a> used pens, hats, T-shirts and key chains with logos on them.</p> <p> <a href="../../../en/case-studies/detail/20">ReCAP</a> left promotional pamphlets with participants to distribute to others.</p> <p> <a href="../../../en/case-studies/detail/114">Green$aver</a> encouraged promotion by word of mouth by leaving flyers with customers after completing assessments, and asking them to recommend the service if they were satisfied with it. Many new customers were referred by friends who were satisfied with Green$avers services.</p> <em>Bert the Salmon</em> produced a 10 minute video for use at community centre talks, and for free distribution to every customer who purchased a mulching lawn mower. </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>What could you leave behind to encourage word-of-mouth promotion?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -154,15 +154,15 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3. Consider arranging introductory sessions to which participants can invite their friends and acquaintances.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>At the end of each <a href="../../../en/case-studies/detail/9">GAP</a> program, group members were asked to invite others to an introductory session hosted by their EcoTeam. A suggested script was provided.</p><p>Regular listeners of <a href="../../../en/case-studies/detail/676">BRIDGE</a>'s <em>Tisankhenji</em> radio program formed "Listeners Clubs" where young girls talked about the issues and shared their stories.</p><p>North Shore Recycling’s <a href="../../../en/case-studies/detail/667">Compost Coaching Program</a> sent each participant an appointment confirmation that included an invitation to ask friends and neighbors to join. At the end of the session, it left participants with a “Pass it On” offering a free Compost Coaching session to participants’ friends, family and neighbors.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How could this work for your program?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -170,18 +170,18 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">4. Ask participants to agree to tell others.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p>Recycling neighbours in the city of <a href="../../../en/case-studies/detail/4">Claremont</a> were recruited to invite their non-recycling neighbours to participate.</p><p>People receiving home visits from <a href="../../../en/case-studies/detail/20">ReCAP</a> were simply asked: "If you are happy with the service you received, please tell others about it." This request was made orally at the end of the visit and was repeated on the recommendation sheet left with the residents.</p><p>Participants first heard about <a href="../../../en/case-studies/detail/9">GAP</a> as "a program for developing sustainable lifestyles and helping others to do the same." At their first meeting, they were reminded of this goal, introduced to the recruiting process, and asked: "Are you up to attempting to create two more teams at the end of the program?" At the end of the program, each participant was asked to invite people to an introductory event.</p><p>	Participants in <a href="../../../en/case-studies/detail/98">Ottawas Commuter Challenge</a> were encouraged to "bike or bus with a buddy", thereby encouraging participants to ask others to join them.</p>
 <p class="tip_example"><strong>Tip:</strong> Research shows that this approach will not work if the person is not interested in spreading the word or feels pressured to do so.</p>
 <p class="tip_example"><strong>Tip:</strong> See the Tool <a href="../../../en/tools-of-change/obtaining-a-commitment">Obtaining a Commitment</a>.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How and when will you ask for this agreement?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -189,8 +189,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">5. Provide feedback on individual and group achievements that participants can share with others.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/9">GAP</a> provided each EcoTeam with information on what they had achieved and sent past and current participants quarterly information on global EcoTeam accomplishments.</p>
 <p class="tip_example"><strong>Tip:</strong> See the Tool <a href="../../../en/tools-of-change/feedback">Feedback</a>.</p>
@@ -199,10 +199,10 @@ theForm.elements[i].checked = status;
     This map provided past and current GAP participants with information on global program achievements that they could share with others (1996).</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Your Program</h1>
 <p>How will you provide feedback?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" title="Login to Save Plans for Tools of Change"><img alt="Login to Save Plans for Tools of Change" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
