--- a/fr/outils-de-changement/Communications-personnalisees-percutantes/index.html
+++ b/fr/outils-de-changement/Communications-personnalisees-percutantes/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/financial-incentives-and-disincentives/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/financial-incentives-and-disincentives/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -120,27 +120,27 @@ renseignements leur sont livrés de façon percutante et personnalisée.</p>
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
 <div class="yellow_headers">1.  Identifier les principaux motivateurs et obstacles associés à l'activité recherchée.  </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Lorsque les participants ont confié aux conseillers à domicile du <a href="../../../fr/etudes-de-cas/detail/9">Environment Network </a>qu'ils doutaient de l'efficacité des produits de nettoyage écologiques dont le réseau faisait la promotion, les conseillers leur ont répondu directement. De plus, ces commentaires ont permis d'identifier les personnes les plus aptes à se préoccuper des questions de propreté et d'hygiène.</p><p><a href="../../../fr/etudes-de-cas/detail/10">Get in the Loop</a> a eu recours à un sondage téléphonique pour établir pourquoi les gens n'achetaient pas plus de produits à contenu recyclé.</p><p>Pendant les visites ÉnerGuide pour les maisons de <a href="../../../fr/etudes-de-cas/detail/81">Green$aver</a> on a utilisé un test d'infiltrométrie, car les fuites d'air étaient considérées comme étant à l'origine des plus grosses pertes d'énergie, et la réduction de ces fuites s'avérait le moyen le plus efficace et évident d'améliorer le confort et de réduire la facture d'énergie.</p><p><a href="../../../fr/etudes-de-cas/detail/115">Greenest City</a> a découvert que les problèmes de sécurité des enfants représentaient un obstacle majeur à ce que les enfants marchent  ou pédalent à l'école, à cause d'une augmentation du nombre d'accidents mortels et de blessures de même que des risques d'intimidation, de harcèlement et d'enlèvement.</p>
 <p class="tip_example"><strong>Conseil:</strong> Voir aussi l'Outil <a href="../../../fr/outils-de-changement/motivateurs">Soutenir la motivation au fil du temps</a> et l'Outil <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques">Surmonter des obstacles spécifiques</a>.</p>
 <p class="tip_example"><strong>Conseil:</strong> Il est plus facile de poser les questions et de trouver les indices qui vous aideront à définir les obstacles et les motivateurs les plus importants pour la personne lors de contacts personnels. Assurez-vous de montrer à vos intervenants comment procéder ainsi.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Veuillez consulter les directives par étapes servant à définir les obstacles et les motivateurs à la section  <a href="../../../fr/guide-de-planification/obtenir-informé/"> Comment bien s'informer </a>.</p>
 <p>Faire une liste.</p>
 <p>Motivateurs :</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 <p>Obstacles :</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">2.  Faire appel à ces motivateurs et expliquer comment surmonter ces obstacles de façon à évoquer des images claires et réelles. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>On a dit aux résidants de <a href="../../../fr/etudes-de-cas/detail/6">Claremont</a> qu'à eux seuls, « les habitants de la Californie produisent environ 40 millions de tonnes de déchets par année, ce qui est suffisant pour remplir une autoroute à deux voies, sur une hauteur de dix pieds, de l'Oregon jusqu'à la frontière du Mexique. À l'heure actuelle, l'Américain moyen produit environ 1 300 livres de déchets municipaux solides par année. La plupart de ces déchets sont acheminés aux sites d'enfouissement et si la tendance actuelle se poursuit, presque tout le comté de Los Angeles ne disposera plus d'aires d'enfouissement d'ici 1991. »</p><p><em><a href="../../../fr/etudes-de-cas/detail/15">In Concert with the Environment</a> </em>avait recours aux graphiques à barres pour illustrer les épargnes environnementales et monétaires réalisées par les foyers qui participaient au programme. On utilisait des icônes en forme d'arbre et de symbole de dollar pour illustrer ces épargnes.</p><p>La compagnie <em><a href="../../../fr/etudes-de-cas/detail/19">Pacific Gas and Electric</a> </em>a demandé à ses évaluateurs à domicile d'aborder ainsi les préoccupations relatives aux pertes de chaleur, aux coûts d'énergie et au confort :</p>
 <p>« Vous savez, s'il fallait additionner toutes les crevasses autour des portes et fenêtres, vous vous retrouveriez avec un trou de la grosseur d'un ballon de football en plein milieu du salon. Songez un instant à toute la chaleur qui s'échapperait d'un tel trou. C'est pourquoi je vous recommande de remplir les crevasses. De plus, votre grenier n'est pas isolé. Les professionnels appellent cela un grenier nu. C'est comme si votre maison faisait face à l'hiver pas juste sans manteau, mais complètement nue! » (traduction libre)</p><p>En Ontario, le programme sur les collectivités écologiques de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>engageait
@@ -152,20 +152,20 @@ renseignements leur sont livrés de façon percutante et personnalisée.</p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton Back pour retourner à cette page.</p>
 <img alt="guelph 2000" src="/images/Guelph2000-1.jpg"/><p>Couverture pour la brochure du programme Arbres d'ombre de Guelph.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Tenant compte des motivateurs et des obstacles énumérés à l'étape 1, quels éléments parmi les suivants pourraient vous être utiles?</p>
 <p>Établir des liens avec des activités auxquelles les personnes s'adonnent déjá:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>
 <p>Décrire l'effet global d'une combinaison de plusieurs petits facteurs cumulés: <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>
 <p>Utiliser des graphiques à barres pour illustrer les statistiques et autres chiffres, et donner vie aux illustrations à l'aide d'icônes percutants:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>
  		<p>Trouver des communications personnalisées percutantes qui pourraient s'avérer utiles dans le cadre de votre programme:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>    
 	</div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
