--- a/fr/outils-de-changement/Medias/index.html
+++ b/fr/outils-de-changement/Medias/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/obtaining-a-commitment/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/obtaining-a-commitment/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -143,24 +143,24 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Utiliser les éléments de la colonne de droite pour voir de quelle façon vous pourriez collaborer avec les médias.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/12">Go Boulder</a></em> a organisé sa « course des navetteurs non-pollueurs » opposant les automobilistes aux cyclistes lors d'un trajet à travers la ville. Cette initiative visait à démontrer l'efficacité de la bicyclette comme mode de transport urbain.</p><p>Les membres du personnel de <em><a href="../../../fr/etudes-de-cas/detail/20">Peterborough Green-Up</a> </em>rédigeaient une chronique mensuelle dans le journal local. Cette chronique fournissait des renseignements et des rétroactions selon les saisons, rappelait les actions entreprises et sensibilisait les gens au programme.</p><p>À Kamloops, le programme <em><a href="../../../fr/etudes-de-cas/detail/25">WaterSmart</a> </em>a lancé le concours du « Conseil de la semaine », en collaboration avec un journal local et une station de radio. Une fois par semaine, le journal publiait un conseil pour économiser l'eau et incitait les lecteurs à communiquer avec la station de radio. La première personne à fournir une bonne réponse recevait un tee-shirt ou une tasse <em><a href="../../../fr/etudes-de-cas/detail/23">WaterSmart</a>, </em>ou encore une pomme de douche ménageant l'eau.</p><p><a href="../../../fr/etudes-de-cas/detail/72">La télévision</a> a été utilisée avec succès pour modeler de nouveaux comportements.</p>
 <p class="tip_example"><strong>Conseil:</strong> N'oubliez pas d'engager la participation des petits journaux communautaires.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quels éléments, parmi les suivants, s'appliqueraient le mieux à votre programme?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Faire paraître des annonces dans les journaux, à la radio et à la télévision</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Inviter les médias à couvrir le lancement du programme ou un événement spécial</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Obtenir la participation d'une personnapté connue, assurer une couverture médiatique et organiser un concours ou un jeu-questionnaire en accord avec les médias</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> arranging a quiz or contest in cooperation with the media</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Transmettre vos messages directement en les joignant aux factures de services pubpcs</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Pubper des chroniques régupères dans les journaux</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Diffuser des annonces à la radio</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Produire des vidéocpps pour la télévision</p>
+<p> Faire paraître des annonces dans les journaux, à la radio et à la télévision</p>
+<p> Inviter les médias à couvrir le lancement du programme ou un événement spécial</p>
+<p> Obtenir la participation d'une personnapté connue, assurer une couverture médiatique et organiser un concours ou un jeu-questionnaire en accord avec les médias</p>
+<p> arranging a quiz or contest in cooperation with the media</p>
+<p> Transmettre vos messages directement en les joignant aux factures de services pubpcs</p>
+<p> Pubper des chroniques régupères dans les journaux</p>
+<p> Diffuser des annonces à la radio</p>
+<p> Produire des vidéocpps pour la télévision</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
