--- a/fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/index.html
+++ b/fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/index.html
@@ -91,7 +91,7 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -126,24 +126,24 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Établir, à partir des recherches, si votre collectivité serait aussi motivée à poser le geste désiré si l'incitatif financier n'était pas offert. Ne procéder que si l'incitatif s'avère nécessaire.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>cherchait à convaincre les gens d'acheter et d'installer des appareils pour économiser l'énergie. Dans le cas d'objets tels que les cordons d'alimentation électriques pour le bloc-moteur des voitures, il s'agissait d'un « achat unique ». Dans le cas d'autres objets, comme les ampoules fluorescentes compactes, l'objectif était d'inciter les gens à en faire l'essai et à continuer de les utiliser par après. La recherche avait indiqué qu'à court terme, les résidants n'auraient pas tendance à effectuer de tels achats sans un incitatif quelconque.</p><p>Les vérifications ÉnerGuide pour les maisons de <a href="../../../fr/etudes-de-cas/detail/81">Green$aver</a> étaient suffisamment détaillées et ciblées pour que les clients réalisent leur valeur et soient prêts à les payer. Cependant, selon les études de marché effectuées par Green$aver, les propriétaires de maison ne voulaient pas payer plus que 150 $ pour ces évaluations. Le coût réel de chaque évaluation s'élevait à 300 $ au moins. La moitié du coût des évaluations était financée grâce au parrainage de Ressources naturelles Canada et l'autre moitié était payée par les clients.</p><p>Même si le regroupement de tous les outils était plus efficace, parmi les méthodes de commercialisation utilisées, la plus efficace s'est avéré la mise en place d'incitatifs financiers. Les gens étaient beaucoup plus enclins à se débarrasser de leur tondeuse à gazon sachant qu'ils recevraient un coupon de 50 $ pour une tondeuse électrique ou poussée. (<a href="../../../fr/etudes-de-cas/detail/91">Portland</a>)</p><p>Le <a href="../../../fr/etudes-de-cas/detail/114">Partenariat pour de meilleurs immeubles</a> a développé des incitatifs financièrement indépendants. Des prêts sans intérêt ou des assurances de remboursement des prêts étaient offerts pour financer le réaménagement des immeubles donnant lieu à des économies garanties sur les services. Une partie des économies a été remise aux participants et une autre au Partenariat pour financer des prêts et des programmes futurs.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Pour obtenir des directives sur la façon de mener cette recherche, consulter la section <a href="../../../fr/guide-de-planification/obtenir-informe/">Comment bien s'informer</a></p>
 <p>Les incitations / découragements financiers sont-ils nécessaires?</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Oui <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Non</div>
+ Oui  Non</div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
 <div class="clear"> </div>
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  S'assurer que la mesure financière incitative ou dissuasive est assez importante pour être prise au sérieux par les gens.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>subventionnait jusqu'à 80 pour cent du coût des produits et des rénovations ciblés.</p><p>La municipalité de Sidney (<a href="../../../fr/etudes-de-cas/detail/21">Quinte <em>Regional
     Recycling</em></a>) facturait 1,50 $ pour chaque sac de déchets additionnel mis aux poubelles.
@@ -153,10 +153,10 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <p class="tip_example"><strong>Conseil:</strong> S'il n'est pas nécessaire d'adopter une mesure incitative financière,     orienter les efforts vers les Outils suivants : <a href="../../../fr/outils-de-changement/attrait-des-normes">Attrait des normes</a>, <a href="../../../fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps">Soutenir la motivation au fil du temps</a> et <a href="../../../fr/outils-de-changement/obtenir-un-engagement/">Obtenir un engagement</a>.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quelles mesures incitatives ou dissuasives ont bien fonctionné ailleurs?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -164,15 +164,15 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  S'assurer que la mesure incitative jouit d'une bonne visibilité.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>menait une campagne de porte à porte pour faire part des mesures incitatives aux résidants.</p><p>La municipalité de Sidney (<a href="../../../fr/etudes-de-cas/detail/21">Quinte <em>Regional Recycling</em>remettait aux résidants 52 étiquettes de sacs « gratuits » qui attiraient l'attention. Seuls les sacs dûment étiquetés étaient ramassés. </a>)</p><p>Le programme de rachat des tondeuses à gazon a été publicisé par le biais d'encarts avec la facture de la <a href="../../../fr/etudes-de-cas/detail/91">Portland</a> General Electric. De plus, les annonces publicitaires télévisées ont été utilisées pour vanter le programme, de même que des affiches dans les magasins locaux, la publicité imprimée, les promotions de fin de semaine dans le magasin de rénovation domiciliaire Home Depot et des événements dans le voisinage.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment garantir que les gens portent attention á vos mesures incitatives?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -180,17 +180,17 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">4.  Concevoir la mesure incitative ou dissuasive de façon telle à décourager la dérobade.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>La municipalité de Sidney (<a href="../../../fr/etudes-de-cas/detail/21">Quinte <em>Regional Recycling</em>ne ramassait que les sacs de poubelles dûment étiquetés. En outre, elle commençait à imposer des amendes pour tout écart au règlement de l'utilisateur-payeur. </a>)</p><p>Deux jours après le début du programme, <em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>devait imposer un nombre limite de huit ampoules fluorescentes compactes par maison et de cinq par appartement. Il était clair que les gens achetaient de grandes quantités d'ampoules comme cadeaux pour des personnes habitant ailleurs qu'à Jasper. Les responsables fixaient également une limite de deux minuteurs intérieurs et de deux minuteurs extérieurs par résidence.</p><p>Pour stationner aux endroits privilégiés pour le covoiturage, les automobilistes devaient obtenir une vignette spéciale <a href="../../../fr/etudes-de-cas/detail/112">GreenCommute</a> et l'apposer dans leur pare-brise.</p><p>La <a href="../../../fr/etudes-de-cas/detail/137">MHCA</a> emploie des vérificateurs externes qui visitent les entreprises participantes au cours de la première et de la quatrième année afin de confirmer si elles ont mis en oeuvre le programme convenablement.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Définir diverses démarches que les gens pourraient prendre pour se dérober á vos mesures incitatives ou dissuasives.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 <p>Retourner en arrière et examiner en quoi vous pourriez décourager chaque tentative de dérobade.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
