--- a/fr/outils-de-changement/Retroaction/index.html
+++ b/fr/outils-de-changement/Retroaction/index.html
@@ -91,7 +91,7 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -129,27 +129,27 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  Définir les éléments qui feront l'objet d'une rétroaction.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>On a fourni aux participants du <em><a href="../../../fr/etudes-de-cas/detail/11">Global Action Plan (GAP) </a></em>des renseignements sur les résultats individuels et de groupe par rapport aux objectifs du programme. Ces objectifs comprenaient le réacheminement des déchets destinés aux sites d'enfouissement et une baisse du taux de consommation en électricité, en gaz naturel et en pétrole pour le transport. <em><a href="../../../fr/etudes-de-cas/detail/9">GAP </a></em>a aussi annoncé publiquement la somme d'argent épargnée par les participants, puisque la réduction des coûts constituait un facteur clé motivant les gens à agir.</p><p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP </a></em>a fait part des progrès accomplis vers l'atteinte de son objectif principal, soit une réduction précise du taux de consommation d'électricité.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Dresser la liste des grands objectifs mesurables de (<a href="../../../fr/guide-de-planification/">Guide de planification</a>).</p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual     <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual     <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual     <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
+<p>1. </p>
+<p class="indent"> Individual      Group</p>
+<p>2. </p>
+<p class="indent"> Individual      Group</p>
+<p>3. </p>
+<p class="indent"> Individual      Group</p>
 <p>Dresser aussi la liste des facteurs clés qui motivent les gens à participer à l'activité. La rétroaction sur ces facteurs peut s'avérer particulièrement utile et inspirante pour les participants et pour les personnes qui aimeraient s'engager.</p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	  	<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	  <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p class="indent"><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Individual 	  <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Group</p>
+<p>1. </p>
+<p class="indent"> Individual 	  	 Group</p>
+<p>2. </p>
+<p class="indent"> Individual 	   Group</p>
+<p>3. </p>
+<p class="indent"> Individual 	   Group</p>
 <p class="t_and_c_p">Cochez ceux que vous pouvez de manière rentable dépister sur une base individuelle et sur une base de groupe.</p>
 </div>
 <!--/plan_col_right--></div>
@@ -158,8 +158,8 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Fournir une rétroaction individuelle s'il est pratique de ce faire.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>En aidant les participants à mieux déchiffrer leurs factures de services publics, des programmes de vérification au foyer comme <a href="../../../fr/etudes-de-cas/detail/3">BC21 PowerSmart</a>, <a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> et les <a href="http://www.gca.ca/">collectivités écologiques</a> (voyez <a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a>, <a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a>, <a href="../../../fr/etudes-de-cas/detail/9">The Environment Network</a> et <a href="../../../fr/etudes-de-cas/detail/20">Peterborough GreenUp</a>) encourageaient chaque foyer à évaluer ses progrès.</p><p>Les équipes écologiques de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>ont acheminé des renseignements sur les réalisations de chaque membre du groupe entre les réunions à une base de données communautaire centrale. Ces renseignements ont été convertis de manière à établir le montant des épargnes réalisées par chaque personne et ces informations ont été transmises au groupe à la fin du programme.</p><p><em>Flash d'information sur les ressources disponibles pour le Canada</em> :<br/>
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> prévoit une deuxième visite de la maison, dans le cadre de laquelle un test d'infiltrométrie est réalisé, qui permet de confirmer les avantages des mesures prises et de vérifier si le travail a été bien fait.</p>
@@ -168,11 +168,11 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
     Une équipe de visite a domicile de <a href="../../../fr/etudes-de-cas/detail/17/"><em>JEEP</em></a> examine les factures de service pour déterminer des économies potentielles disponibles aux propriétaires d'une maison. Les futures factures fourniront le rétroaction  individuel.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Parmi les éléments (s'il en est) que vous avez identifiés comme &lt;&gt; á l'étape 1, lesquels seraient pratiques à transmettre aux individus?</p>
 <p>Comment faire pour fournir cette rétroaction?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -180,8 +180,8 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  Trouver une façon rentable de fournir une rétroaction communautaire.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Les données sur les réalisations collectives de toutes les équipes écologiques de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>étaient regroupées et distribuées tous les trois mois aux participants actuels et passés, dans le cadre d'un bulletin d'information. <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>faisait également appel aux journaux, à la télévision, aux réseaux informatisés et aux systèmes de récompenses en place dans chaque collectivité.</p><p><em><a href="../../../fr/etudes-de-cas/detail/12">Go Boulder</a> </em>s'est organisé pour que la presse locale publie deux articles par mois environ mettant en vedette des individus et des groupes locaux. On a présenté, à maintes reprises, cinq vidéos différents à la chaîne de télévision communautaire. Les organisateurs ont aussi fourni des rétroactions dans le cadre de documents publicitaires, d'événements spéciaux et de présentations à des organisations communautaires.</p><p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>renseignait les collectivités sur la quantité de kilowatts épargnés à l'aide d'une grande affiche en forme d'ampoule compacte fluorescente installée au centre-ville. Ces renseignements étaient aussi diffusés au moyen d'articles de journaux, de publicités et de rapports de projet.</p><p><em><a href="../../../fr/etudes-de-cas/detail/21">Quinte Regional Recycling</a> </em>offrait une rétroaction positive aux citoyens grâce à des messages radiophoniques, des présentations à la télévision, des articles de journaux et la production d'un calendrier annuel centré sur la réduction des déchets. On y présentait les cas de personnes et de commerces locaux qui avaient activement participé au programme Boîte bleue 2000 et qui avaient amélioré la qualité de vie de leurs collectivités en recyclant ou en compostant.</p>
 <p class="tip_example"><strong>Conseil:</strong> En général, limitez vos rétroactions communautaires à quelques éléments     seulement.</p>
@@ -191,21 +191,21 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
     Le signe de rétroaction communautaire de <a href="../../../fr/etudes-de-cas/detail/17/"><em>JEEP</em></a></p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Énumérez les éléments pour lesquels vous pouvez fournir le rétroaction communautaire:</p>
 <p> </p>
-<p>1. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p>2. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-<p>3. <a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p>1. </p>
+<p>2. </p>
+<p>3. </p>
 <p>Comment pourriez-vous le fournir?</p>
 <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Progrès de cheminement de signes  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Médias  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Calendriers muraux  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Littérature / bulletins  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Spéciaux événements  <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Présentations
+ Progrès de cheminement de signes  <br/>
+ Médias  <br/>
+ Calendriers muraux  <br/>
+ Littérature / bulletins  <br/>
+ Spéciaux événements  <br/>
+ Présentations
     <p> </p>
 </div>
 <!--/plan_col_right--></div>
