--- a/fr/outils-de-changement/Visites-a-domicile/index.html
+++ b/fr/outils-de-changement/Visites-a-domicile/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/norm-appeals/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/norm-appeals/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -133,26 +133,26 @@ theForm.elements[i].checked = status;
 </ul>
 </div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>recevaient la formation normale de 10 jours offerte par le gouvernement de l'Ontario à toutes les nouvelles collectivités écologiques. Ils consacraient un jour et demie à l'étude des principes et pratiques du marketing social.</p>
 <p class="tip_example"><strong>Conseil:</strong> On peut se procurer du matériel de formation auprès de l'Association des collectivités ecologiques (voir l'étude de cas portant sur <a href="../../../fr/etudes-de-cas/detail/22/">ReCAP</a>).</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quel type de formation pouvez-vous assurer?</p>
 <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></div>
+</div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
 <div class="clear"> </div>
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Obtenir du résidant une invitation ou un engagement à passer une certaine quantité de temps avec vous.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Les membres de <a href="../../../fr/etudes-de-cas/detail/4">Be Water Wise ... It Makes Cents</a> ont aussi trouvé qu'il n'était pas trop difficile de se rendre chez les gens sans avertissement préalable pour leur fournir des renseignements. Néanmoins, lorsqu'ils ont tenté de vendre leurs trousses de conservation d'eau lors de ces mêmes visites, ils ont découvert que peu de foyers voulaient en acheter, même si le prix des trousses était considérablement réduit. De plus, les personnes à qui on demandait d'acheter une trousse avaient moins tendance à signer une entente de participation au programme, même si l'entente ne signifiait pas pour autant qu'elles doivent procéder à l'achat.</p><p>Lorsque <em><a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a> </em>a lancé son programme d'arbres ombreux gratuits, 35 pour cent des visites à domicile étaient organisées par des gens qui réagissaient directement à cet incitatif. Dix pourcent des visites reflétaient les efforts des télévendeurs et 30 pour cent résultaient d'une promotion de bouche à oreille.</p><p>Les représentants de <em><a href="../../../fr/etudes-de-cas/detail/8">Earth-Works</a>, </em>du <em><a href="../../../fr/etudes-de-cas/detail/24">Toxic Challenge</a> </em>et de <em><a href="../../../fr/etudes-de-cas/detail/26">We're Toxic Free</a> </em>se sont tous présentés chez les gens sans avertissement préalable. Ils ont eu recours à des questionnaires et des mesures incitatives pour convaincre les gens de leur consacrer du temps.</p><p><em>Flash d'information sur les ressources disponibles pour le Canada</em> :<br/>
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> organise une campagne nationale de promotion qui fournit des pistes de clients aux agents de prestation de la région.</p>
@@ -160,21 +160,21 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <a href="#table1">Voir Table 1</a></p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quelle situation s'applique à votre programme?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Votre visite à domicile durera habituellement moins de 20 minutes  	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>  Vous ne demanderez pas aux gens d'acheter quelque chose 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> La plupart des maisons dans votre localité profiteraient d'une telle visite</p>
+<p> Votre visite à domicile durera habituellement moins de 20 minutes  	<br/>
+  Vous ne demanderez pas aux gens d'acheter quelque chose 	<br/>
+ La plupart des maisons dans votre localité profiteraient d'une telle visite</p>
 <p>Si vous avez coché toutes les cases ci-dessus ou si vos visites ont lieu dans un quartier de retraités ou un secteur de chalets, vous n'avez probablement pas besoin de prendre rendez-vous au préalable.</p>
 <p>Autrement, il serait préférable de demander aux résidants de téléphoner eux-mêmes pour prendre rendez-vous. Dans un tel cas, quel usage feriez-vous des éléments de promotion suivants?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>  Médias 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>   Programmes scolaires 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>   Événements spéciaux/affichages 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>  Programmes incitatifs spéciaux 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>   Télévente 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>   Encarts joints aux factures de taxes et de services publics 	<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a>  De bouche à oreille</p>
+<p>  Médias 	<br/>
+   Programmes scolaires 	<br/>
+   Événements spéciaux/affichages 	<br/>
+  Programmes incitatifs spéciaux 	<br/>
+   Télévente 	<br/>
+   Encarts joints aux factures de taxes et de services publics 	<br/>
+  De bouche à oreille</p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -182,12 +182,12 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  Motiver les résidants à agir. Offrir des incitatifs financiers si nécessaire.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>reliait ses recommandations aux motivateurs de chaque occupant. Les conseillers écoutaient attentivement les remarques des personnes lors de la rencontre initiale et tout au long de la visite du domicile, et ils identifiaient des indices révélateurs des domaines d'intérêt de la personne. Si un occupant démontrait un intérêt particulier pour le jardinage, par exemple, ou si on constatait que le jardin était bien entretenu, les conseillers avaient tendance à formuler des recommandations relatives au jardinage (p. ex., le choix de plantes indigènes, la plantation d'arbres ombreux, le compostage).</p><p>Le personnel du programme <a ""="" 127""""="" detail="" etudes-de-cas="" fr="" href="">Water Efficient Durham</a> se présentait aux propriétaires, lors de sa première visite et leur remettait deux brochures. Durant sa deuxième visite, il donnait aux propriétaires des jauges pour mesurer le niveau des précipitations d’eau et distribuait des brochures sur les soins à apporter aux pelouses. À sa troisième visite, les propriétaires se voyaient remettre le guide intitulé : <a href="fr/etudes-de-cas/detail/130">Économiser l’eau chez soi</a>  ainsi que des étiquettes à attacher à leurs robinets extérieurs. Au cours de sa quatrième intervention, le personnel  demandait aux propriétaires de signer le formulaire d’engagement.</p></div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Pour des directives par étapes sur la façon de réaliser ceci, voir l'Outil <a href="../../../fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps">Soutenir la motivation au fil du temps</a> et l'Outil <a href="../../../fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives">Mesures financières incitatives et dissuasives</a>.</p>
 </div>
@@ -197,8 +197,8 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">4.  Aider le résidant à surmonter tout obstacle particulier qui pourrait l'empêcher d'agir.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>installaient gratuitement plusieurs appareils de conservation d'énergie, surmontant ainsi plusieurs obstacles potentiels, y compris le manque de temps, de confiance, de connaissances et d'argent.</p>
 <p>De plus, lorsqu'un résidant manifestait certaines réticences quant aux coûts directs d'une recommandation, les conseillers lui proposaient un prêt écologique à un taux d'intérêt inférieur au taux courant.</p><p><a ""="" 127""""="" detail="" etudes-de-cas="" fr="" href="">Water Efficient Durham</a> a remis aux propriétaires des jauges pour mesurer le niveau des précipitations d’eau, des étiquettes-rappel et des brochures d’information.</p>
@@ -207,7 +207,7 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
     Une personne de personnel installe le bourrelet étanche dans le Projet communautaire de Premières nations  d'Okanagan (<a href="../../../fr/etudes-de-cas/detail/439">BC21 PowerSmart</a>).</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Pour des directives par étapes sur la façon de surmonter les obstacles, voir l'Outil <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques/">Surmonter des obstacles spécifiques</a></p>
 </div>
@@ -217,12 +217,12 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <!--/clear_the_area-->
 <div class="yellow_headers">5.  Demander au résidant de conclure une entente par laquelle il s'engage à poser les gestes que vous préconisez.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Voir l'Outil <a href="../../../fr/outils-de-changement/obtenir-un-engagement/">Obtenir un engagement</a></p>
 </div>
