--- a/fr/outils-de-changement/attrait-des-normes/index.html
+++ b/fr/outils-de-changement/attrait-des-normes/index.html
@@ -91,7 +91,7 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -125,22 +125,22 @@ clientèle cible, tel que précisé ci-dessous. </p>
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
 <div class="yellow_headers">1.  Concevoir l'activité pour qu'elle s'avère très visible en soi. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>La grosseur et la couleur des contenants de recyclage de type boîte bleue, et le simple geste de les placer régulièrement au bord de la rue, confirmaient le fait que d'autres personnes recyclaient.</p>
 <p><em><a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a> </em>demandait aux résidents de marquer l'endroit où ils allaient planter des arbres ombreux à l'aide d'un pieu. Peints d'un vert éclatant, ces pieux affichaient clairement les mots <em><a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a>. </em></p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme </h1>
 <p>Que pourriez-vous faire pour rendre votre projet le plus visible possible? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">2.  Fournir des preuves de participation additionnelles. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/21">Quinte Regional Recycling</a> </em>a placé sur les boîtes bleues des participants des collants indiquant : « We Compost Too » (Nous compostons aussi).</p><p>Lorsque les équipes de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>effectuaient des visites à domicile, ils plantaient une enseigne sur la pelouse des résidants pour faire part de cette visite aux voisins.</p><p><a href="../../../fr/etudes-de-cas/detail/8">Earth-Works</a> a fourni aux commerçants participants des collants à mettre sur leur porte pour afficher qu'ils étaient des composteurs actifs. Ceci a permis de renforcer le message que le compostage était une activité communautaire. Les responsables ont également fourni aux participants des pancartes à planter sur leur pelouse.</p><p>Les agents multiplicateurs dans le programme <a href="../../../fr/etudes-de-cas/detail/30">PEP: Formation par les pairs sur les MTS et le SIDA</a> se sont fait donner des t-shirts pour porter dans l'école, pour qu'ils soient identifiés en tant que personnes ressources auprès des autres élèves. Ils ont été invités avec leurs parents à une réception organisée à la fin du programme, où ils ont reçu une plaque reconnaissant leur contribution.</p>
 <p class="tip_example"><strong>Conseil:</strong> Ceci s'avère particulièrement important si la visite en soi n'est pas très visible.</p>
@@ -149,53 +149,53 @@ clientèle cible, tel que précisé ci-dessous. </p>
 		Une pancarte de Earth-Works à mettre sur la pelouse. 
 	</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme </h1>
 <p>En quoi les produits suivants pourraient ils vous être utiles?</p>
 <p>Des collants:<br/>
-		<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+		
 </p>	
 	<p>Des pancartes à mettre sur la pelouse, à planter dans le jardin ou à afficher dans la fenêtre: <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>
 	<p>Des macarons:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+
 </p>
 	</div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">3.  Créer des occasions qui permettront aux gens d'échanger sur leurs expériences et qui favoriseront le <a href="../../../fr/outils-de-changement/de-bouche-a-oreille/">Bouche à oreille</a>.  </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Chaque rencontre des équipes écologiques du <em><a href="../../../fr/etudes-de-cas/detail/11">Global
     Action Plan</a> </em>permettait aux membres d'échanger sur les expériences et succès
     encourus au cours du mois. </p><p>Chaque fois que les membres de <a href="../../../fr/etudes-de-cas/detail/22">ReCAP </a>rendaient visite aux gens, ils leur disaient : « Si vous êtes satisfait du service rendu, auriez-vous l'obligeance de parler de nous à votre entourage? »</p><p>Les participants du <a href="../../../fr/etudes-de-cas/detail/97">Défi transport d'Ottawa</a> étaient encouragés à prendre leur vélo ou l'autobus avec un ami, les encourageant par le fait même à inviter d'autres personnes à se joindre à eux.</p><p><a href="../../../fr/etudes-de-cas/detail/113">La participation d'Environnement Canada au Défi transport</a> reposait sur l'engagement d'un grand nombre de bénévoles à contacter leurs collègues et à les encourager à participer.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p></p>
 </div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">4.  Prendre bonne note de la participation des gens et la signaler aux autres. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Le message adopté pour inciter les résidants de <a href="../../../fr/etudes-de-cas/detail/6">Claremont</a> à recycler davantage déclarait ce qui suit : Plus de 80 pour cent des Claremontois accordent leur appui au programme de recyclage de la ville.</p><p><a href="../../../fr/etudes-de-cas/detail/7">Clean Air Commute</a> présentait le type et la fréquence de l'activité de réduction du smog engagée par chaque participant, ainsi que son nom et sa signature. Ces renseignements étaient clairement affichés sur le lieu de travail. À la fin de chaque mois, les coordonnateurs recueillaient tous les résultats et les mettaient au babillard.</p><p>Les spécialistes en compostage de <a href="../../../fr/etudes-de-cas/detail/8">Earth-Works</a> profitaient des visites à domicile pour expliquer aux gens en quoi leurs voisins avaient réglé divers problèmes grâce au composteur.</p><p><em><a href="../../../fr/etudes-de-cas/detail/12">Go Boulder</a>,<a href="../../../fr/etudes-de-cas/detail/17"> JEEP</a>,<a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>et <em><a href="../../../fr/etudes-de-cas/detail/21">Quinte Regional Recycling</a> </em>ont tous présenté des reportages dans les médias confirmant la participation des membres de la collectivité.</p>
 <p class="tip_example"><strong>Conseil:</strong> Il est bon d'illustrer l'engagement de meneurs d'opinion, soit des gens respectés qui donneront le bon exemple aux autres, comme des héros locaux, des leaders spirituels, des personnalités politiques ou des chefs d'entreprise réputés.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>En quoi les activités suivantes pourraient elles appuyer vos efforts?</p>
 <p>Présentations sur la participation des gens dans les médias et ailleurs:<br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+</p>
 	<p>Tournées des maisons et jardins: <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>  
+</p>  
 	<p>Engagement du public: <br/>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>  
-	<p>Albums photographiques: <br/><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
-	<p>Statistiques sur l'attitude et la participation des membres de la collectivité: <br/><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+</p>  
+	<p>Albums photographiques: <br/></p>
+	<p>Statistiques sur l'attitude et la participation des membres de la collectivité: <br/>
 </p>
 	</div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
