--- a/fr/outils-de-changement/de-bouche-a-oreille/index.html
+++ b/fr/outils-de-changement/de-bouche-a-oreille/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/home-visits/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/home-visits/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -133,66 +133,66 @@ bouche à oreille est habituellement gratuit. </p>
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
 <div class="yellow_headers">1.  Offrir aux participants des expériences d'une telle qualité qu'ils voudront en faire part aux autres. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Plusieurs semaines après la visite á domicile,
     les conseillers de <a href="../../../fr/etudes-de-cas/detail/3">BC21 PowerSmart</a> retournaient á la résidence des participants
     pour s'assurer que les produits qu'on leur avait remis étaient bien installés et qu'ils
     en étaient satisfait. 
 </p></div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment faire pour vérifier et garantir que les participants sont satisfaits de votre programme et des activités que vous proposez? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">2.  Laisser aux participants des produits pour le « montre et raconte » et d'autres articles promotionnels qui les aideront et les encourageront à propager la bonne nouvelle. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/17">JEEP</a> </em>offrait aux gens des stylos, des chapeaux, des tee-shirts et des
     porte-clés affichant le logo du programme.<p>Les responsables de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>remettaient aux participants des dépliants publicitaires et leur demandaient de les distribuer à d'autres personnes.</p><p><a href="../../../fr/etudes-de-cas/detail/81">Green$aver</a> encourageait le bouche à oreille en remettant des prospectus aux clients au terme des évaluations et en leur demandant de recommander le service s'ils en étaient satisfaits. Nombre des nouveaux clients étaient donc des amis de personnes satisfaites du service de Green$aver et qui l'avaient recommandé.</p><p><a href="../../../fr/etudes-de-cas/detail/128">Hébert le Saumon</a> a produit un vidéo de 10 minutes aux fins des conférences communautaires; une copie était remise gratuitement à toutes les personnes qui faisaient l'achat d'une tondeuse déchiqueteuse.</p>
 </p></div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Que pourriez-vous remettre à vos participants pour encourager le bouche à oreille? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">3.  Songer à organiser des rencontres d'initiation auxquelles les participants peuvent convier leurs amis et connaissances. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>À la fin de chaque programme <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a>, </em>on demandait aux membres du groupe d'inviter d'autres personnes à assister à une rencontre d'initiation animée par leur équipe écologique. Un petit texte d'invitation leur était remis pour les aider en ce sens.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Cette approche s'avérerait-elle efficace dans le contexte de votre programme? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">4.  Demander aux participants de s'engager à faire part du programme à d'autres personnes. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>À <a href="../../../fr/etudes-de-cas/detail/6">Claremont</a>, les responsables recrutaient des personnes qui recyclaient et leur demandaient d'inviter leurs voisins à participer au programme et à recycler eux-aussi.</p><p>Lorsque les participants entendaient parler de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>pour la première fois, ils apprenaient qu'il s'agissait « d'un programme pour encourager l'adoption de modes de vie durables et <em>pour aider les autres à</em><em> faire de même </em>». Lors de la première rencontre, on leur rappelait cet objectif, on les initiait au processus de recrutement et on leur demandait s'ils seraient en mesure de former deux autres équipes à la fin du programme. Lorsque le programme prenait fin, les responsables demandaient à chaque participant d'inviter diverses personnes à assister à une activité d'initiation.</p><p>Lors des visites à domicile, les responsables de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>disaient simplement aux gens : « Si vous êtes satisfaits des services rendus, veuillez en faire part aux autres. » Cette demande était exprimée verbalement à la fin de la visite et se répétait par écrit sur le formulaire de recommandations qu'on laissait aux occupants.</p><p>Les participants du <a href="../../../fr/etudes-de-cas/detail/97">Défi transport d'Ottawa</a> étaient encouragés à prendre leur vélo ou l'autobus avec un ami, les encourageant par le fait même à inviter d'autres personnes à se joindre à eux.</p>
 <p class="tip_example"><strong>Conseil:</strong> Les recherches démontrent que cette approche ne s'avérera pas efficace si     la personne n'est pas intéressée à propager la bonne nouvelle ou si elle se sent     obligée d'agir.</p>
 <p class="tip_example"><strong>Conseil:</strong> Voir l'Outil <a href="../../../fr/outils-de-changement/obtenir-un-engagement">Obtenir un engagement</a>. 
 	</p></div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quand et comment demanderez-vous aux personnes de conclure cette entente? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">5.  Fournir aux participants des rétroactions sur les réalisations individuelles et collectives qu'ils peuvent partager avec d'autres. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les responsables de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>ont fourni à chaque équipe écologique des données sur ses réalisations propres. Chaque trimestre, ils ont aussi transmis aux participants actuels et passés des informations sur les réalisations globales de toutes les équipes écologiques.</p>
 <p class="tip_example"><strong>Conseil:</strong> Voir l'Outil <a href="../../../fr/outils-de-changement/Retroaction">Rétroaction</a>.</p>
@@ -200,10 +200,10 @@ bouche à oreille est habituellement gratuit. </p>
 <a href="/images/documentimages/tools/feedback-1.jpg"><img alt="Global Action Plan image" border="0" height="93" src="/images/documentimages/tools/feedback-1.jpg" width="189"/></a><br/>
 		Cette carte a fourni aux participants passés et actuels de <a href="../../../fr/études-de-cas/detail/11/">GAP</a> l'information sur les accomplissements globaux du programme qu'ils pourraient partager avec d'autres (1996).</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment fournirez-vous une rétroaction </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
