--- a/fr/outils-de-changement/groupes-de-soutien-par-les-pairs/index.html
+++ b/fr/outils-de-changement/groupes-de-soutien-par-les-pairs/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/prompts/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/prompts/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -127,87 +127,87 @@ de sauvegarder l'environnement de la planète. </p>
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
 <div class="yellow_headers">1.  Structurer les groupes de façon à permettre à tous les participants d'assumer un rôle de leadership à un moment ou l'autre. Fournir l'appui nécessaire aux meneurs. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Tour à tour, les membres des équipes écologiques de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>ont tous eu l'occasion de présider certaines réunions, avec l'aide d'un bénévole de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>dûment formé ayant déjà complété le programme. L'entraîneur assistait à la première et à la dernière rencontre. Entre-temps, il effectuait un suivi téléphonique en vue d'appuyer la personne qui menait la rencontre. En retour, chaque meneur encourageait les autres membres du groupe à effectuer les changements proposés dans le cadre de la réunion.</p>
 <p>Les participants avaient tous recours á un cahier de travail pour déterminer les activités á l'ordre du jour. Lors de chaque réunion, on fournissait également au meneur un guide portant sur un sujet spécifique et qui servait á orienter la réunion.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quel appui pouvez-vous fournir à vos meneurs de groupe? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">2.  Concevoir les réunions de groupe de façon à permettre à chaque participant d'appliquer ce qu'il a appris dans son propre foyer. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les participants au projet <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>ont d'abord analysé de quelle façon ils exploitaient diverses ressources dans leur propre foyer. À l'aide du guide, ils ont ensuite engagé, chaque mois, des mesures spécifiques à domicile.</p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton <em>Back</em> pour retourner à cette page.<br/>
 <a href="/images/documentimages/tools/peersg-1.jpg"><img alt="Peer Support Groups image" border="0" height="92" src="/images/documentimages/tools/peersg-1.jpg" width="149"/></a><br/>
 		Cette partie d'un guide du chef de sujet illustre le niveau du support fourni à l'amorce de chaque réunion, et aussi le support fourni par ces amorces aux autres membres de leur groupe. Pour d'autres extraits voir <a href="../../../fr/études-de-cas/detail/11/"><em>GAP</em></a>.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment pouvez-vous vous assurer que les participants s'appliquent ce qui est discuté dans leurs propres ménages? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">3.  S'assurer que le groupe est de la bonne grosseur. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>suggérait de mettre sur pied des groupes de 6 à 12 personnes et précisait aux organisateurs que « si les groupes sont trop gros, les réunions ne durent pas assez longtemps pour permettre à chaque personne de prendre la parole. Si les groupes sont trop petits, il 'y a pas assez de monde pour générer le dynamisme et la motivation nécessaires, comme c'est le cas au sein d'un groupe plus large. »</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quelle est la grosseur du groupe que vous comptez mettre sur pied? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">4.  Établir les groupes de façon à permettre au moins six réunions, à deux ou trois semaines d'intervalle tout au plus. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les membres des équipes écologiques de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>se sont réunis huit fois en tout, à des intervalles de deux semaines.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Combien de rencontres organiserez-vous pour les membres du groupe? À quelle fréquence se réuniront-ils? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">5.  Fournir sans cesse aux membres du groupe des rétroactions et de l'encouragement. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Grâce aux méthodes de rétroaction de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a>, </em>chaque participant pouvait constater l'effet positif de ses gestes sur l'environnement. On tenait compte des activités de chaque équipe écologique et ces renseignements étaient acheminés à une base de données communautaire centralisée. Ces rapports étaient ensuite convertis en données qui permettaient de mesurer les économies réalisées par les membres des équipes écologiques, et qui étaient retransmises à ces membres à la fin du programme.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Pour obtenir des directives par étapes sur la façon de réaliser ceci, voir l'Outil <a href="../../../fr/outils-de-changement/Retroaction/">Rétroaction</a>. </p>
 </div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">6.  Élaborer un processus de recrutement durable pour mettre sur pied de nouveaux groupes. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les derniers chapitres du Neighbourhood Lifestyles Program de <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>incitaient les membres à mettre sur pied au moins deux autres équipes écologiques. À cette fin, ils recevaient un texte de recrutement standard leur suggérant des façons d'inviter leurs voisins à assister à une séance d'initiation informelle à la maison du recruteur. Cette première rencontre visait à sensibiliser les voisins au programme et à déterminer s'ils voulaient ou non former une équipe.</p>
 <p>Les participants savaient depuis le début qu'ils auraient à faire du recrutement. En effet, au cours de leur propre rencontre d'initiation, les responsables leur avaient indiqué que le programme <em><a href="../../../fr/etudes-de-cas/detail/11">Gap</a> </em>visait, d'une part, à favoriser des modes de vie durables et, d'autre part, à aider les autres à faire de même. Lors de la première réunion de l'équipe écologique, on sensibilisait les participants au processus de recrutement et on leur demandait s'ils étaient prêts à mettre sur pied deux autres équipes à la fin du programme.</p>
 <p>En 1996, une étude sur le recrutement effectué aux États-Unis révélait qu'entre 40 et 50 pour cent des personnes invitées à une rencontre d'initiation avaient accepté de ce faire, et que 85 pour cent des individus ayant assisté à la rencontre d'initiation avaient éventuellement joint les rangs d'une équipe écologique.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Trouver divers moyens pour aider les participants à former de nouveaux groupes.</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 <p>Que pourriez-vous faire pour préparer vos participants à bien jouer ce rôle? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
