--- a/fr/outils-de-changement/motivateurs/index.html
+++ b/fr/outils-de-changement/motivateurs/index.html
@@ -85,13 +85,13 @@ theForm.elements[i].checked = status;
 
 
 
-<li class="last_nav"><a class="" href="/en/tools-of-change/feedback/" title="">English</a></li>
+<li class="last_nav"><a class="" href="../../../en/tools-of-change/feedback/" title="">English</a></li>
 </ul></div><!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -118,20 +118,20 @@ theForm.elements[i].checked = status;
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
 <div class="yellow_headers">1. S'assurer que les personnes sont déjà prédisposées à participer à une activité quelconque et qu'on a déjà tenu compte des obstacles qui pourraient les empêcher de ce faire. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les membres du personnel de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont suivi le cours de formation de base offert dans le cadre du programme sur les collectivités écologiques et qui décrivait les motivateurs communs aptes à susciter les actions désirées. Ils découvraient ainsi que le coût et le confort constituent deux motivateurs clés qui encouragent les gens à vérifier le degré d'éco-efficacité de leur maison.</p><p>Selon <a href="../../../fr/etudes-de-cas/detail/81">Green$aver</a>, les deux principaux facteurs qui poussent un propriétaire à demander une vérification de l'efficacité énergétique de sa maison étaient le confort et les économies.</p><p>Le <a href="../../../fr/etudes-de-cas/detail/97">Défi transport d'Ottawa</a> a utilisé les économies pour promouvoir le transport actif et durable.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Pour des directives par étapes, voir les Outils suivants <a href="../../../fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps/">Soutenir la motivation</a>, <a href="../../../fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/">Mesures financières incitatives et dissuasives</a> et <a href="../../../fr/outils-de-changement/surmonter-des-obstacles-specifiques/">Surmonter des obstacles spécifiques</a>.</p>
 </div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">2. Rendre le motivateur le plus visible possible. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont pris bonne note de toutes les remarques des occupants des maisons visitées, soit lors de l'entrevue initiale et tout au long de la visite de la maison. Ils ont ensuite discuté des activités proposées (p. ex., le jardinage) et des intérêts des personnes (p. ex., la sécurité des enfants) qui semblaient les plus importantes dans chaque cas. Dans le cadre des activités de formation habituelles du programme sur les collectivités écologiques, on a fourni aux conseillers à domicile des directives et des exercices pratiques pour les aider à bien accomplir cette tâche.</p><p><em>Flash d'information sur les ressources disponibles pour le Canada</em> :<br/>
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> organise une campagne nationale de promotion axée sur les deux principaux facteurs de motivation, le confort et les économies, utilisant des expressions comme « Le confort, on y tient », « Il aide à faire votre maison chaud et confortable, tout en réduisant vos coûts de chauffage », « Réduisez vos coûts énergetiques » et « En avoir pour votre argent ».</p><p><a href="../../../fr/etudes-de-cas/detail/108">Le programme de conservation de l'eau de Barrie</a> expliquait que si les résidents ne parvenaient pas à économiser suffisamment d'eau, la ville se verrait alors dans l'obligation de hausser ses redevances pour l'eau.  De plus, ses affiches mettaient l'accent sur les économies que feraient les ménages sur les factures d'eau.</p><p><a href="../../../fr/etudes-de-cas/detail/107">Le projet multi-universitaire de co-voiturage</a> a utilisé des slogans tels que « Pourquoi vous rendre fous, vous pouvez utiliser le co-voiturage », « Si vous ne pouvez supporter la chaleur, joignez-vous au co-voiturage » et « Co-voiturage et économies! » faisant référence aux raisons clés pour utiliser le co-voiturage : la frustration de la congestion et ne pas être capable de trouver un stationnement, les changements climatiques et le désir des gens d'économiser de l'argent.</p>
@@ -139,37 +139,37 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <a href="/images/documentimages/GetInLoop/GetInLoop-1.jpg"><img alt="Get In the Loop image" border="0" height="96" src="/images/documentimages/GetInLoop/GetInLoop-1.jpg" width="181"/></a><br/>
 	Les repères de <a href="/Francais/CaseStudies/default.asp?ID=10"><em>Get in the Loop</em></a> étaient de 4,25 pouces de grandes par 5,5 pouces de haut (10,8 centimètres X 13,3 centimètres) et ont été imprimées en trois couleurs. Elles ont porté le même logo qui a été utilisé dans la toutes les publicité et promotion.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Que pourriez-vous faire pour que les motivateurs soient faciles á voir? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">3. Décrire en termes clairs et positifs les actions précises que vous demandez aux gens de poser. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Plusieurs programmes de réduction des déchets ont réussi à promouvoir le recyclage en le rendant plus facile, soit en permettant aux gens de mettre leurs produits recyclables au bord de la route en même temps que les poubelles. De plus, <em><a href="../../../fr/etudes-de-cas/detail/21">Quinte Regional Recycling</a> </em>a établi un lien avec le compostage en posant sur les boîtes bleues de recyclage un collant arborant le message « We compost too » (Nous compostons aussi).</p><p><em>Flash d'information sur les ressources disponibles pour le Canada</em> :<br/>
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> permet d'établir un lien avec l'achat, la rénovation et la transformation de maisons.</p><p><a href="../../../fr/etudes-de-cas/detail/91">Portland</a> a insisté sur la promotion de l'air pur les jours où le niveau de smog atteint un niveau malsain. En 1995, Portland métropolitain était classé comme n'atteignant pas les normes pour le monoxyde de carbone et d'ozone au niveau du sol (smog).</p><p><a href="../../../fr/etudes-de-cas/detail/115">Greenest City</a> a conçu son programme d'aller-retour actif et sécuritaire d'après les déplacements des parents et des enfants qui faisaient la navette à l'école à tous les jours.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quels termes positifs pourriez-vous employer pour indiquer clairement aux gens les bons gestes à poser? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div><!--/clear_the_area-->
 <div class="yellow_headers">4. Garantir que le motivateur utilisé se rapproche le plus, en temps et en espace, du geste que vous entendez susciter. </div><!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples </h1>
 <p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont félicité les occupants pour les efforts de conservation qu'ils avaient déjá déployés, y compris la décision de faire venir les conseillers en question.</p><p>Le <a href="../../../fr/etudes-de-cas/detail/97">Défi transport d'Ottawa</a> reconnaissait les efforts des banlieusards actifs, et encourageait ces personnes à agir comme modèle à suivre pour leurs collègues de travail, voisins, membres de la famille et amis.</p>
 </div><!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment pourriez-vous faire de même? </p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a>
+<p>
 </p></div><!--/plan_col_right-->
 </div><!--/left_content_2col-->
 <div class="clear"> </div>
