--- a/fr/outils-de-changement/obtenir-un-engagement/index.html
+++ b/fr/outils-de-changement/obtenir-un-engagement/index.html
@@ -91,7 +91,7 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul>  <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class_current" href="../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
@@ -123,40 +123,40 @@ theForm.elements[i].checked = status;
 <!--/Bar-->
 <div class="yellow_headers">1.  S'assurer que la personne s'intéresse vraiment à l'activité.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont demandé aux résidants de participer à la tournée d'évaluation de la maison. Ils ont pris note de leurs réactions à chaque étape du processus. À la fin de la visite, ils les ont invités à rédiger avec eux la liste des réparations ou rénovations prioritaires à exécuter.</p><p>Les programmes <a href="../../../fr/etudes-de-cas/detail/87">«Les citoyens à l'oeuvre» et «Comptez sur moi!»</a>, ont permis aux participants de franchir différentes étapes préparatoires avant de signer un engagement.</p><p><a href="../../../fr/etudes-de-cas/detail/127">Water Efficient Durham</a> demandait aux propriétaire de signer un formulaire d’engagement lors de la quatrième visite des étudiants. Le facteur de réussite le plus déterminant à cette étape-ci était le niveau de confiance que les étudiants avaient réussi à établir avec les propriétaires.</p>
 <p class="tip_example"><strong>Conseil:</strong> Les recherches démontrent que cet outil ne s'avérera pas utile si la     personne n'a pas déjà l'intention d'agir ou si elle sent qu'on exerce des pres-sions     indues sur elle.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment faire pour déterminer si la personne est assez motivée pour s'engager dans l'activité?</p>
-<a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></div>
+</div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
 <div class="clear"> </div>
 <!--/clear_the_area-->
 <div class="yellow_headers">2.  Demander aux gens de s'engager verbalement ou par écrit à commettre le geste.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p><em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>a demandé aux gens de s'engager verbalement à procéder aux rénovations et réparations indiquées sur la liste qu'ils avaient aidé à rédiger.</p><p>Dans le cadre <a href="../../../fr/etudes-de-cas/detail/87">«Les citoyens à l'oeuvre» et «Comptez sur moi!»</a>, les participants ont été invités à compléter et signer un formulaire d'engagement volontaire.</p><p>Le programme <a href="../../../fr/etudes-de-cas/detail/123">Walking the Talk?</a> a distribué aux participants une carte-rappel d'un jaune attrayant à afficher dans leur foyer de même qu'un bloc-note, pour leur rappeler leur engagement à participer au projet.</p> <p>Les surveillants de <a href="../../../fr/etudes-de-cas/detail/102">Coupez le contact</a> ont localisé les véhicules en marche au ralenti et s'en sont approchés pour parler aux conducteurs à travers la vitre. Après avoir discuté des effets de la marche au ralenti, on les invitait à s'engager à arrêter le moteur de leur véhicule quand ils s'arrêtaient. Les conducteurs qui s'engageaient à couper le contact quand ils s'arrêtaient, recevaient un autocollant transparent à coller sur la vitre témoignant de leur engagement à arrêter le moteur, de même que des cartons d'information.</p>
 <p class="tip_example"><strong>Conseil:</strong> Les recherches révèlent que les engagements écrits semblent avoir un effet plus durable que les engagements verbaux.</p>
 <p class="tip_example"><strong>Conseil:</strong> Les engagements anonymes ou privés se sont avérés moins efficaces que les engagements partagés ou publics.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Quel type d'engagement demanderez vous aux gens de prendre?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Verbal, ou</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Écrit</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Public, ou</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="20" src="../../../public/images/loginlock.gif" width="20"/></a> Privé</p>
+<p> Verbal, ou</p>
+<p> Écrit</p>
+<p> Public, ou</p>
+<p> Privé</p>
 <p>Quand et comment leur demanderez-vous de prendre cet engagement?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
@@ -164,17 +164,17 @@ theForm.elements[i].checked = status;
 <!--/clear_the_area-->
 <div class="yellow_headers">3.  Si c'est possible, demander aux gens de s'engager davantage au fil du temps.</div>
 <!--/yellow_headers-->
-<div class="left_content_2col" style="background: #e5edee;">
-<div class="plan_col_left" style="width: 90%;">
+<div class="left_content_2col">
+<div class="plan_col_left">
 <h1>Exemples</h1>
 <p>Lors des visites à domicile, les responsables de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>disaient simplement aux gens : « Si vous êtes satisfaits des services rendus, veuillez en faire part aux autres. » Cette demande était exprimée verbalement à la fin de la visite et se répétait par écrit sur le formulaire de recommandations qu'on laissait aux occupants.</p><p>Le Groupe d'action sur les pesticides de <a href="../../../fr/etudes-de-cas/detail/136">Waterloo</a> a d'abord demandé, puis s'est vu accorder, une série de rencontres avec des employés de la ville et le conseil municipal. Il a ensuite convaincu la ville de Waterloo de mettre sur pied un groupe de travail qui examinerait les alternatives à l'épandage de pesticides et qui en déterminerait le coût. Finalement, certaines des recommandations ont été incorporées au Programme de protection des végétaux de la ville.</p>
 <p class="tip_example"><strong>Conseil:</strong> On a démontré que les gens qui acquiescent d'abord à une petite requête     auront plus tendance à répondre à des requêtes plus grandes à l'avenir.</p>
 </div>
 <!--/plan_col_left-->
-<div class="plan_col_right" style="display: none;">
+<div class="plan_col_right">
 <h1>Votre Programme</h1>
 <p>Comment faire pour inciter les gens à acquiescer à des requêtes de plus en plus grandes?</p>
-<p><a class="thickbox" href="/app/views/login/form_thick_reg_fr.lasso?height=270&amp;width=340&amp;modal=true" title="Veuillez ouvrir une session"><img alt="Veuillez ouvrir une session" height="27" src="../../../public/images/loginlock_form.gif" width="234"/></a></p>
+<p></p>
 </div>
 <!--/plan_col_right--></div>
 <!--/left_content_2col-->
