--- a/en/search/index.html
+++ b/en/search/index.html
@@ -10,7 +10,7 @@
 <!--
 TODO: the topics need to be sorted to make sense
 
-ideally also be able to select a checkbox without anything in the text field
+ideally also be able to select a checkbox without anything in the text field (and get results)
 
 also need to find a way to connect search to the searchbox on the homepage
 
